// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`emitOnly generator option when both 'crudResolvers' and \`inputs\` is set should not fail and generate proper files, enhance and index: enhance 1`] = `
"import { ClassType } from \\"type-graphql\\";
import * as crudResolvers from \\"./resolvers/crud/resolvers-crud.index\\";
import * as argsTypes from \\"./resolvers/crud/args.index\\";
import * as actionResolvers from \\"./resolvers/crud/resolvers-actions.index\\";
import * as models from \\"./models\\";
import * as outputTypes from \\"./resolvers/outputs\\";
import * as inputTypes from \\"./resolvers/inputs\\";

const crudResolversMap = {
  User: crudResolvers.UserCrudResolver,
  Post: crudResolvers.PostCrudResolver
};
const actionResolversMap = {
  User: {
    user: actionResolvers.FindUniqueUserResolver,
    findFirstUser: actionResolvers.FindFirstUserResolver,
    users: actionResolvers.FindManyUserResolver,
    createUser: actionResolvers.CreateUserResolver,
    createManyUser: actionResolvers.CreateManyUserResolver,
    deleteUser: actionResolvers.DeleteUserResolver,
    updateUser: actionResolvers.UpdateUserResolver,
    deleteManyUser: actionResolvers.DeleteManyUserResolver,
    updateManyUser: actionResolvers.UpdateManyUserResolver,
    upsertUser: actionResolvers.UpsertUserResolver,
    aggregateUser: actionResolvers.AggregateUserResolver,
    groupByUser: actionResolvers.GroupByUserResolver
  },
  Post: {
    post: actionResolvers.FindUniquePostResolver,
    findFirstPost: actionResolvers.FindFirstPostResolver,
    posts: actionResolvers.FindManyPostResolver,
    createPost: actionResolvers.CreatePostResolver,
    createManyPost: actionResolvers.CreateManyPostResolver,
    deletePost: actionResolvers.DeletePostResolver,
    updatePost: actionResolvers.UpdatePostResolver,
    deleteManyPost: actionResolvers.DeleteManyPostResolver,
    updateManyPost: actionResolvers.UpdateManyPostResolver,
    upsertPost: actionResolvers.UpsertPostResolver,
    aggregatePost: actionResolvers.AggregatePostResolver,
    groupByPost: actionResolvers.GroupByPostResolver
  }
};
const crudResolversInfo = {
  User: [\\"user\\", \\"findFirstUser\\", \\"users\\", \\"createUser\\", \\"createManyUser\\", \\"deleteUser\\", \\"updateUser\\", \\"deleteManyUser\\", \\"updateManyUser\\", \\"upsertUser\\", \\"aggregateUser\\", \\"groupByUser\\"],
  Post: [\\"post\\", \\"findFirstPost\\", \\"posts\\", \\"createPost\\", \\"createManyPost\\", \\"deletePost\\", \\"updatePost\\", \\"deleteManyPost\\", \\"updateManyPost\\", \\"upsertPost\\", \\"aggregatePost\\", \\"groupByPost\\"]
};
const argsInfo = {
  FindUniqueUserArgs: [\\"where\\"],
  FindFirstUserArgs: [\\"where\\", \\"orderBy\\", \\"cursor\\", \\"take\\", \\"skip\\", \\"distinct\\"],
  FindManyUserArgs: [\\"where\\", \\"orderBy\\", \\"cursor\\", \\"take\\", \\"skip\\", \\"distinct\\"],
  CreateUserArgs: [\\"data\\"],
  CreateManyUserArgs: [\\"data\\", \\"skipDuplicates\\"],
  DeleteUserArgs: [\\"where\\"],
  UpdateUserArgs: [\\"data\\", \\"where\\"],
  DeleteManyUserArgs: [\\"where\\"],
  UpdateManyUserArgs: [\\"data\\", \\"where\\"],
  UpsertUserArgs: [\\"where\\", \\"create\\", \\"update\\"],
  AggregateUserArgs: [\\"where\\", \\"orderBy\\", \\"cursor\\", \\"take\\", \\"skip\\"],
  GroupByUserArgs: [\\"where\\", \\"orderBy\\", \\"by\\", \\"having\\", \\"take\\", \\"skip\\"],
  FindUniquePostArgs: [\\"where\\"],
  FindFirstPostArgs: [\\"where\\", \\"orderBy\\", \\"cursor\\", \\"take\\", \\"skip\\", \\"distinct\\"],
  FindManyPostArgs: [\\"where\\", \\"orderBy\\", \\"cursor\\", \\"take\\", \\"skip\\", \\"distinct\\"],
  CreatePostArgs: [\\"data\\"],
  CreateManyPostArgs: [\\"data\\", \\"skipDuplicates\\"],
  DeletePostArgs: [\\"where\\"],
  UpdatePostArgs: [\\"data\\", \\"where\\"],
  DeleteManyPostArgs: [\\"where\\"],
  UpdateManyPostArgs: [\\"data\\", \\"where\\"],
  UpsertPostArgs: [\\"where\\", \\"create\\", \\"update\\"],
  AggregatePostArgs: [\\"where\\", \\"orderBy\\", \\"cursor\\", \\"take\\", \\"skip\\"],
  GroupByPostArgs: [\\"where\\", \\"orderBy\\", \\"by\\", \\"having\\", \\"take\\", \\"skip\\"]
};

type ResolverModelNames = keyof typeof crudResolversMap;

type ModelResolverActionNames<
  TModel extends ResolverModelNames
  > = keyof typeof crudResolversMap[TModel][\\"prototype\\"];

export type ResolverActionsConfig<
  TModel extends ResolverModelNames
  > = Partial<Record<ModelResolverActionNames<TModel> | \\"_all\\", MethodDecorator[]>>;

export type ResolversEnhanceMap = {
  [TModel in ResolverModelNames]?: ResolverActionsConfig<TModel>;
};

export function applyResolversEnhanceMap(
  resolversEnhanceMap: ResolversEnhanceMap,
) {
  for (const resolversEnhanceMapKey of Object.keys(resolversEnhanceMap)) {
    const modelName = resolversEnhanceMapKey as keyof typeof resolversEnhanceMap;
    const crudTarget = crudResolversMap[modelName].prototype;
    const resolverActionsConfig = resolversEnhanceMap[modelName]!;
    const actionResolversConfig = actionResolversMap[modelName];
    if (resolverActionsConfig._all) {
      const allActionsDecorators = resolverActionsConfig._all;
      const resolverActionNames = crudResolversInfo[modelName as keyof typeof crudResolversInfo];
      for (const resolverActionName of resolverActionNames) {
        const actionTarget = (actionResolversConfig[
          resolverActionName as keyof typeof actionResolversConfig
        ] as Function).prototype;
        for (const allActionsDecorator of allActionsDecorators) {
          allActionsDecorator(
            crudTarget,
            resolverActionName,
            Object.getOwnPropertyDescriptor(crudTarget, resolverActionName)!,
          );
          allActionsDecorator(
            actionTarget,
            resolverActionName,
            Object.getOwnPropertyDescriptor(actionTarget, resolverActionName)!,
          );
        }
      }
    }
    const resolverActionsToApply = Object.keys(resolverActionsConfig).filter(
      it => it !== \\"_all\\"
    );
    for (const resolverActionName of resolverActionsToApply) {
      const decorators = resolverActionsConfig[
        resolverActionName as keyof typeof resolverActionsConfig
      ] as MethodDecorator[];
      const actionTarget = (actionResolversConfig[
        resolverActionName as keyof typeof actionResolversConfig
      ] as Function).prototype;
      for (const decorator of decorators) {
        decorator(
          crudTarget,
          resolverActionName,
          Object.getOwnPropertyDescriptor(crudTarget, resolverActionName)!,
        );
        decorator(
          actionTarget,
          resolverActionName,
          Object.getOwnPropertyDescriptor(actionTarget, resolverActionName)!,
        );
      }
    }
  }
}

type ArgsTypesNames = keyof typeof argsTypes;

type ArgFieldNames<TArgsType extends ArgsTypesNames> = Exclude<
  keyof typeof argsTypes[TArgsType][\\"prototype\\"],
  number | symbol
>;

type ArgFieldsConfig<
  TArgsType extends ArgsTypesNames
  > = FieldsConfig<ArgFieldNames<TArgsType>>;

export type ArgConfig<TArgsType extends ArgsTypesNames> = {
  class?: ClassDecorator[];
  fields?: ArgFieldsConfig<TArgsType>;
};

export type ArgsTypesEnhanceMap = {
  [TArgsType in ArgsTypesNames]?: ArgConfig<TArgsType>;
};

export function applyArgsTypesEnhanceMap(
  argsTypesEnhanceMap: ArgsTypesEnhanceMap,
) {
  for (const argsTypesEnhanceMapKey of Object.keys(argsTypesEnhanceMap)) {
    const argsTypeName = argsTypesEnhanceMapKey as keyof typeof argsTypesEnhanceMap;
    const typeConfig = argsTypesEnhanceMap[argsTypeName]!;
    const typeClass = argsTypes[argsTypeName];
    const typeTarget = typeClass.prototype;
    applyTypeClassEnhanceConfig(
      typeConfig,
      typeClass,
      typeTarget,
      argsInfo[argsTypeName as keyof typeof argsInfo],
    );
  }
}

type TypeConfig = {
  class?: ClassDecorator[];
  fields?: FieldsConfig;
};

type FieldsConfig<TTypeKeys extends string = string> = Partial<
  Record<TTypeKeys | \\"_all\\", PropertyDecorator[]>
>;

function applyTypeClassEnhanceConfig<
  TEnhanceConfig extends TypeConfig,
  TType extends object
>(
  enhanceConfig: TEnhanceConfig,
  typeClass: ClassType<TType>,
  typePrototype: TType,
  typeFieldNames: string[]
) {
  if (enhanceConfig.class) {
    for (const decorator of enhanceConfig.class) {
      decorator(typeClass);
    }
  }
  if (enhanceConfig.fields) {
    if (enhanceConfig.fields._all) {
      const allFieldsDecorators = enhanceConfig.fields._all;
      for (const typeFieldName of typeFieldNames) {
        for (const allFieldsDecorator of allFieldsDecorators) {
          allFieldsDecorator(typePrototype, typeFieldName);
        }
      }
    }
    const configFieldsToApply = Object.keys(enhanceConfig.fields).filter(
      it => it !== \\"_all\\"
    );
    for (const typeFieldName of configFieldsToApply) {
      const fieldDecorators = enhanceConfig.fields[typeFieldName]!;
      for (const fieldDecorator of fieldDecorators) {
        fieldDecorator(typePrototype, typeFieldName);
      }
    }
  }
}

const modelsInfo = {
  User: [\\"id\\", \\"email\\"],
  Post: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"authorId\\", \\"metadata\\"]
};

type ModelNames = keyof typeof models;

type ModelFieldNames<TModel extends ModelNames> = Exclude<
  keyof typeof models[TModel][\\"prototype\\"],
  number | symbol
>;

type ModelFieldsConfig<TModel extends ModelNames> = FieldsConfig<
  ModelFieldNames<TModel>
>;

export type ModelConfig<TModel extends ModelNames> = {
  class?: ClassDecorator[];
  fields?: ModelFieldsConfig<TModel>;
};

export type ModelsEnhanceMap = {
  [TModel in ModelNames]?: ModelConfig<TModel>;
};

export function applyModelsEnhanceMap(modelsEnhanceMap: ModelsEnhanceMap) {
  for (const modelsEnhanceMapKey of Object.keys(modelsEnhanceMap)) {
    const modelName = modelsEnhanceMapKey as keyof typeof modelsEnhanceMap;
    const modelConfig = modelsEnhanceMap[modelName]!;
    const modelClass = models[modelName];
    const modelTarget = modelClass.prototype;
    applyTypeClassEnhanceConfig(
      modelConfig,
      modelClass,
      modelTarget,
      modelsInfo[modelName as keyof typeof modelsInfo],
    );
  }
}

const outputsInfo = {
  AggregateUser: [\\"_count\\", \\"_avg\\", \\"_sum\\", \\"_min\\", \\"_max\\"],
  UserGroupBy: [\\"id\\", \\"email\\", \\"_count\\", \\"_avg\\", \\"_sum\\", \\"_min\\", \\"_max\\"],
  AggregatePost: [\\"_count\\", \\"_avg\\", \\"_sum\\", \\"_min\\", \\"_max\\"],
  PostGroupBy: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"authorId\\", \\"metadata\\", \\"_count\\", \\"_avg\\", \\"_sum\\", \\"_min\\", \\"_max\\"],
  AffectedRowsOutput: [\\"count\\"],
  UserCount: [\\"posts\\"],
  UserCountAggregate: [\\"id\\", \\"email\\", \\"_all\\"],
  UserAvgAggregate: [\\"id\\"],
  UserSumAggregate: [\\"id\\"],
  UserMinAggregate: [\\"id\\", \\"email\\"],
  UserMaxAggregate: [\\"id\\", \\"email\\"],
  PostCountAggregate: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"authorId\\", \\"metadata\\", \\"_all\\"],
  PostAvgAggregate: [\\"authorId\\"],
  PostSumAggregate: [\\"authorId\\"],
  PostMinAggregate: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"authorId\\"],
  PostMaxAggregate: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"authorId\\"]
};

type OutputTypesNames = keyof typeof outputTypes;

type OutputTypeFieldNames<TOutput extends OutputTypesNames> = Exclude<
  keyof typeof outputTypes[TOutput][\\"prototype\\"],
  number | symbol
>;

type OutputTypeFieldsConfig<
  TOutput extends OutputTypesNames
  > = FieldsConfig<OutputTypeFieldNames<TOutput>>;

export type OutputTypeConfig<TOutput extends OutputTypesNames> = {
  class?: ClassDecorator[];
  fields?: OutputTypeFieldsConfig<TOutput>;
};

export type OutputTypesEnhanceMap = {
  [TOutput in OutputTypesNames]?: OutputTypeConfig<TOutput>;
};

export function applyOutputTypesEnhanceMap(
  outputTypesEnhanceMap: OutputTypesEnhanceMap,
) {
  for (const outputTypeEnhanceMapKey of Object.keys(outputTypesEnhanceMap)) {
    const outputTypeName = outputTypeEnhanceMapKey as keyof typeof outputTypesEnhanceMap;
    const typeConfig = outputTypesEnhanceMap[outputTypeName]!;
    const typeClass = outputTypes[outputTypeName];
    const typeTarget = typeClass.prototype;
    applyTypeClassEnhanceConfig(
      typeConfig,
      typeClass,
      typeTarget,
      outputsInfo[outputTypeName as keyof typeof outputsInfo],
    );
  }
}

const inputsInfo = {
  UserWhereInput: [\\"AND\\", \\"OR\\", \\"NOT\\", \\"id\\", \\"email\\", \\"posts\\"],
  UserOrderByWithRelationInput: [\\"id\\", \\"email\\", \\"posts\\"],
  UserWhereUniqueInput: [\\"id\\", \\"email\\"],
  UserOrderByWithAggregationInput: [\\"id\\", \\"email\\", \\"_count\\", \\"_avg\\", \\"_max\\", \\"_min\\", \\"_sum\\"],
  UserScalarWhereWithAggregatesInput: [\\"AND\\", \\"OR\\", \\"NOT\\", \\"id\\", \\"email\\"],
  PostWhereInput: [\\"AND\\", \\"OR\\", \\"NOT\\", \\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"author\\", \\"authorId\\", \\"metadata\\"],
  PostOrderByWithRelationInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"author\\", \\"authorId\\", \\"metadata\\"],
  PostWhereUniqueInput: [\\"uuid\\"],
  PostOrderByWithAggregationInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"authorId\\", \\"metadata\\", \\"_count\\", \\"_avg\\", \\"_max\\", \\"_min\\", \\"_sum\\"],
  PostScalarWhereWithAggregatesInput: [\\"AND\\", \\"OR\\", \\"NOT\\", \\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"authorId\\", \\"metadata\\"],
  UserCreateInput: [\\"email\\", \\"posts\\"],
  UserUpdateInput: [\\"email\\", \\"posts\\"],
  UserCreateManyInput: [\\"id\\", \\"email\\"],
  UserUpdateManyMutationInput: [\\"email\\"],
  PostCreateInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"metadata\\", \\"author\\"],
  PostUpdateInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"metadata\\", \\"author\\"],
  PostCreateManyInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"authorId\\", \\"metadata\\"],
  PostUpdateManyMutationInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"metadata\\"],
  IntFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"not\\"],
  StringFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"contains\\", \\"startsWith\\", \\"endsWith\\", \\"mode\\", \\"not\\"],
  PostListRelationFilter: [\\"every\\", \\"some\\", \\"none\\"],
  PostOrderByRelationAggregateInput: [\\"_count\\"],
  UserCountOrderByAggregateInput: [\\"id\\", \\"email\\"],
  UserAvgOrderByAggregateInput: [\\"id\\"],
  UserMaxOrderByAggregateInput: [\\"id\\", \\"email\\"],
  UserMinOrderByAggregateInput: [\\"id\\", \\"email\\"],
  UserSumOrderByAggregateInput: [\\"id\\"],
  IntWithAggregatesFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"not\\", \\"_count\\", \\"_avg\\", \\"_sum\\", \\"_min\\", \\"_max\\"],
  StringWithAggregatesFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"contains\\", \\"startsWith\\", \\"endsWith\\", \\"mode\\", \\"not\\", \\"_count\\", \\"_min\\", \\"_max\\"],
  DateTimeFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"not\\"],
  BoolFilter: [\\"equals\\", \\"not\\"],
  StringNullableFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"contains\\", \\"startsWith\\", \\"endsWith\\", \\"mode\\", \\"not\\"],
  UserRelationFilter: [\\"is\\", \\"isNot\\"],
  JsonFilter: [\\"equals\\", \\"not\\"],
  PostCountOrderByAggregateInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"authorId\\", \\"metadata\\"],
  PostAvgOrderByAggregateInput: [\\"authorId\\"],
  PostMaxOrderByAggregateInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"authorId\\"],
  PostMinOrderByAggregateInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"authorId\\"],
  PostSumOrderByAggregateInput: [\\"authorId\\"],
  DateTimeWithAggregatesFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"not\\", \\"_count\\", \\"_min\\", \\"_max\\"],
  BoolWithAggregatesFilter: [\\"equals\\", \\"not\\", \\"_count\\", \\"_min\\", \\"_max\\"],
  StringNullableWithAggregatesFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"contains\\", \\"startsWith\\", \\"endsWith\\", \\"mode\\", \\"not\\", \\"_count\\", \\"_min\\", \\"_max\\"],
  JsonWithAggregatesFilter: [\\"equals\\", \\"not\\", \\"_count\\", \\"_min\\", \\"_max\\"],
  PostCreateNestedManyWithoutAuthorInput: [\\"create\\", \\"connectOrCreate\\", \\"createMany\\", \\"connect\\"],
  StringFieldUpdateOperationsInput: [\\"set\\"],
  PostUpdateManyWithoutAuthorInput: [\\"create\\", \\"connectOrCreate\\", \\"upsert\\", \\"createMany\\", \\"connect\\", \\"set\\", \\"disconnect\\", \\"delete\\", \\"update\\", \\"updateMany\\", \\"deleteMany\\"],
  IntFieldUpdateOperationsInput: [\\"set\\", \\"increment\\", \\"decrement\\", \\"multiply\\", \\"divide\\"],
  UserCreateNestedOneWithoutPostsInput: [\\"create\\", \\"connectOrCreate\\", \\"connect\\"],
  DateTimeFieldUpdateOperationsInput: [\\"set\\"],
  BoolFieldUpdateOperationsInput: [\\"set\\"],
  NullableStringFieldUpdateOperationsInput: [\\"set\\"],
  UserUpdateOneRequiredWithoutPostsInput: [\\"create\\", \\"connectOrCreate\\", \\"upsert\\", \\"connect\\", \\"update\\"],
  NestedIntFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"not\\"],
  NestedStringFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"contains\\", \\"startsWith\\", \\"endsWith\\", \\"not\\"],
  NestedIntWithAggregatesFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"not\\", \\"_count\\", \\"_avg\\", \\"_sum\\", \\"_min\\", \\"_max\\"],
  NestedFloatFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"not\\"],
  NestedStringWithAggregatesFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"contains\\", \\"startsWith\\", \\"endsWith\\", \\"not\\", \\"_count\\", \\"_min\\", \\"_max\\"],
  NestedDateTimeFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"not\\"],
  NestedBoolFilter: [\\"equals\\", \\"not\\"],
  NestedStringNullableFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"contains\\", \\"startsWith\\", \\"endsWith\\", \\"not\\"],
  NestedDateTimeWithAggregatesFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"not\\", \\"_count\\", \\"_min\\", \\"_max\\"],
  NestedBoolWithAggregatesFilter: [\\"equals\\", \\"not\\", \\"_count\\", \\"_min\\", \\"_max\\"],
  NestedStringNullableWithAggregatesFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"contains\\", \\"startsWith\\", \\"endsWith\\", \\"not\\", \\"_count\\", \\"_min\\", \\"_max\\"],
  NestedIntNullableFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"not\\"],
  NestedJsonFilter: [\\"equals\\", \\"not\\"],
  PostCreateWithoutAuthorInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"metadata\\"],
  PostCreateOrConnectWithoutAuthorInput: [\\"where\\", \\"create\\"],
  PostCreateManyAuthorInputEnvelope: [\\"data\\", \\"skipDuplicates\\"],
  PostUpsertWithWhereUniqueWithoutAuthorInput: [\\"where\\", \\"update\\", \\"create\\"],
  PostUpdateWithWhereUniqueWithoutAuthorInput: [\\"where\\", \\"data\\"],
  PostUpdateManyWithWhereWithoutAuthorInput: [\\"where\\", \\"data\\"],
  PostScalarWhereInput: [\\"AND\\", \\"OR\\", \\"NOT\\", \\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"authorId\\", \\"metadata\\"],
  UserCreateWithoutPostsInput: [\\"email\\"],
  UserCreateOrConnectWithoutPostsInput: [\\"where\\", \\"create\\"],
  UserUpsertWithoutPostsInput: [\\"update\\", \\"create\\"],
  UserUpdateWithoutPostsInput: [\\"email\\"],
  PostCreateManyAuthorInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"metadata\\"],
  PostUpdateWithoutAuthorInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"metadata\\"]
};

type InputTypesNames = keyof typeof inputTypes;

type InputTypeFieldNames<TInput extends InputTypesNames> = Exclude<
  keyof typeof inputTypes[TInput][\\"prototype\\"],
  number | symbol
>;

type InputTypeFieldsConfig<
  TInput extends InputTypesNames
  > = FieldsConfig<InputTypeFieldNames<TInput>>;

export type InputTypeConfig<TInput extends InputTypesNames> = {
  class?: ClassDecorator[];
  fields?: InputTypeFieldsConfig<TInput>;
};

export type InputTypesEnhanceMap = {
  [TInput in InputTypesNames]?: InputTypeConfig<TInput>;
};

export function applyInputTypesEnhanceMap(
  inputTypesEnhanceMap: InputTypesEnhanceMap,
) {
  for (const inputTypeEnhanceMapKey of Object.keys(inputTypesEnhanceMap)) {
    const inputTypeName = inputTypeEnhanceMapKey as keyof typeof inputTypesEnhanceMap;
    const typeConfig = inputTypesEnhanceMap[inputTypeName]!;
    const typeClass = inputTypes[inputTypeName];
    const typeTarget = typeClass.prototype;
    applyTypeClassEnhanceConfig(
      typeConfig,
      typeClass,
      typeTarget,
      inputsInfo[inputTypeName as keyof typeof inputsInfo],
    );
  }
}

"
`;

exports[`emitOnly generator option when both 'crudResolvers' and \`inputs\` is set should not fail and generate proper files, enhance and index: mainIndex 1`] = `
"import * as crudResolversImport from \\"./resolvers/crud/resolvers-crud.index\\";
import { NonEmptyArray } from \\"type-graphql\\";

export * from \\"./enums\\";
export * from \\"./models\\";
export * from \\"./resolvers/crud\\";

export const crudResolvers = Object.values(crudResolversImport) as unknown as NonEmptyArray<Function>;

export * from \\"./resolvers/inputs\\";
export * from \\"./resolvers/outputs\\";
export * from \\"./enhance\\";
export * from \\"./scalars\\";

export const resolvers = [
  ...crudResolvers,

] as unknown as NonEmptyArray<Function>;
"
`;

exports[`emitOnly generator option when both 'crudResolvers' and \`inputs\` is set should not fail and generate proper files, enhance and index: structure 1`] = `
"
[type-graphql]
  enhance.ts
  [enums]
    JsonNullValueFilter.ts
    JsonNullValueInput.ts
    PostScalarFieldEnum.ts
    QueryMode.ts
    SortOrder.ts
    UserScalarFieldEnum.ts
    index.ts
  helpers.ts
  index.ts
  [models]
    Post.ts
    User.ts
    index.ts
  [resolvers]
    [crud]
      [Post]
        AggregatePostResolver.ts
        CreateManyPostResolver.ts
        CreatePostResolver.ts
        DeleteManyPostResolver.ts
        DeletePostResolver.ts
        FindFirstPostResolver.ts
        FindManyPostResolver.ts
        FindUniquePostResolver.ts
        GroupByPostResolver.ts
        PostCrudResolver.ts
        UpdateManyPostResolver.ts
        UpdatePostResolver.ts
        UpsertPostResolver.ts
        [args]
          AggregatePostArgs.ts
          CreateManyPostArgs.ts
          CreatePostArgs.ts
          DeleteManyPostArgs.ts
          DeletePostArgs.ts
          FindFirstPostArgs.ts
          FindManyPostArgs.ts
          FindUniquePostArgs.ts
          GroupByPostArgs.ts
          UpdateManyPostArgs.ts
          UpdatePostArgs.ts
          UpsertPostArgs.ts
          index.ts
      [User]
        AggregateUserResolver.ts
        CreateManyUserResolver.ts
        CreateUserResolver.ts
        DeleteManyUserResolver.ts
        DeleteUserResolver.ts
        FindFirstUserResolver.ts
        FindManyUserResolver.ts
        FindUniqueUserResolver.ts
        GroupByUserResolver.ts
        UpdateManyUserResolver.ts
        UpdateUserResolver.ts
        UpsertUserResolver.ts
        UserCrudResolver.ts
        [args]
          AggregateUserArgs.ts
          CreateManyUserArgs.ts
          CreateUserArgs.ts
          DeleteManyUserArgs.ts
          DeleteUserArgs.ts
          FindFirstUserArgs.ts
          FindManyUserArgs.ts
          FindUniqueUserArgs.ts
          GroupByUserArgs.ts
          UpdateManyUserArgs.ts
          UpdateUserArgs.ts
          UpsertUserArgs.ts
          index.ts
      args.index.ts
      index.ts
      resolvers-actions.index.ts
      resolvers-crud.index.ts
    [inputs]
      BoolFieldUpdateOperationsInput.ts
      BoolFilter.ts
      BoolWithAggregatesFilter.ts
      DateTimeFieldUpdateOperationsInput.ts
      DateTimeFilter.ts
      DateTimeWithAggregatesFilter.ts
      IntFieldUpdateOperationsInput.ts
      IntFilter.ts
      IntWithAggregatesFilter.ts
      JsonFilter.ts
      JsonWithAggregatesFilter.ts
      NestedBoolFilter.ts
      NestedBoolWithAggregatesFilter.ts
      NestedDateTimeFilter.ts
      NestedDateTimeWithAggregatesFilter.ts
      NestedFloatFilter.ts
      NestedIntFilter.ts
      NestedIntNullableFilter.ts
      NestedIntWithAggregatesFilter.ts
      NestedJsonFilter.ts
      NestedStringFilter.ts
      NestedStringNullableFilter.ts
      NestedStringNullableWithAggregatesFilter.ts
      NestedStringWithAggregatesFilter.ts
      NullableStringFieldUpdateOperationsInput.ts
      PostAvgOrderByAggregateInput.ts
      PostCountOrderByAggregateInput.ts
      PostCreateInput.ts
      PostCreateManyAuthorInput.ts
      PostCreateManyAuthorInputEnvelope.ts
      PostCreateManyInput.ts
      PostCreateNestedManyWithoutAuthorInput.ts
      PostCreateOrConnectWithoutAuthorInput.ts
      PostCreateWithoutAuthorInput.ts
      PostListRelationFilter.ts
      PostMaxOrderByAggregateInput.ts
      PostMinOrderByAggregateInput.ts
      PostOrderByRelationAggregateInput.ts
      PostOrderByWithAggregationInput.ts
      PostOrderByWithRelationInput.ts
      PostScalarWhereInput.ts
      PostScalarWhereWithAggregatesInput.ts
      PostSumOrderByAggregateInput.ts
      PostUpdateInput.ts
      PostUpdateManyMutationInput.ts
      PostUpdateManyWithWhereWithoutAuthorInput.ts
      PostUpdateManyWithoutAuthorInput.ts
      PostUpdateWithWhereUniqueWithoutAuthorInput.ts
      PostUpdateWithoutAuthorInput.ts
      PostUpsertWithWhereUniqueWithoutAuthorInput.ts
      PostWhereInput.ts
      PostWhereUniqueInput.ts
      StringFieldUpdateOperationsInput.ts
      StringFilter.ts
      StringNullableFilter.ts
      StringNullableWithAggregatesFilter.ts
      StringWithAggregatesFilter.ts
      UserAvgOrderByAggregateInput.ts
      UserCountOrderByAggregateInput.ts
      UserCreateInput.ts
      UserCreateManyInput.ts
      UserCreateNestedOneWithoutPostsInput.ts
      UserCreateOrConnectWithoutPostsInput.ts
      UserCreateWithoutPostsInput.ts
      UserMaxOrderByAggregateInput.ts
      UserMinOrderByAggregateInput.ts
      UserOrderByWithAggregationInput.ts
      UserOrderByWithRelationInput.ts
      UserRelationFilter.ts
      UserScalarWhereWithAggregatesInput.ts
      UserSumOrderByAggregateInput.ts
      UserUpdateInput.ts
      UserUpdateManyMutationInput.ts
      UserUpdateOneRequiredWithoutPostsInput.ts
      UserUpdateWithoutPostsInput.ts
      UserUpsertWithoutPostsInput.ts
      UserWhereInput.ts
      UserWhereUniqueInput.ts
      index.ts
    [outputs]
      AffectedRowsOutput.ts
      AggregatePost.ts
      AggregateUser.ts
      PostAvgAggregate.ts
      PostCountAggregate.ts
      PostGroupBy.ts
      PostMaxAggregate.ts
      PostMinAggregate.ts
      PostSumAggregate.ts
      UserAvgAggregate.ts
      UserCount.ts
      UserCountAggregate.ts
      UserGroupBy.ts
      UserMaxAggregate.ts
      UserMinAggregate.ts
      UserSumAggregate.ts
      index.ts
  scalars.ts
"
`;

exports[`emitOnly generator option when only 'crudResolvers' is set should generate proper files, enhance and index: enhance 1`] = `
"import { ClassType } from \\"type-graphql\\";
import * as crudResolvers from \\"./resolvers/crud/resolvers-crud.index\\";
import * as argsTypes from \\"./resolvers/crud/args.index\\";
import * as actionResolvers from \\"./resolvers/crud/resolvers-actions.index\\";
import * as models from \\"./models\\";
import * as outputTypes from \\"./resolvers/outputs\\";
import * as inputTypes from \\"./resolvers/inputs\\";

const crudResolversMap = {
  User: crudResolvers.UserCrudResolver,
  Post: crudResolvers.PostCrudResolver
};
const actionResolversMap = {
  User: {
    user: actionResolvers.FindUniqueUserResolver,
    findFirstUser: actionResolvers.FindFirstUserResolver,
    users: actionResolvers.FindManyUserResolver,
    createUser: actionResolvers.CreateUserResolver,
    createManyUser: actionResolvers.CreateManyUserResolver,
    deleteUser: actionResolvers.DeleteUserResolver,
    updateUser: actionResolvers.UpdateUserResolver,
    deleteManyUser: actionResolvers.DeleteManyUserResolver,
    updateManyUser: actionResolvers.UpdateManyUserResolver,
    upsertUser: actionResolvers.UpsertUserResolver,
    aggregateUser: actionResolvers.AggregateUserResolver,
    groupByUser: actionResolvers.GroupByUserResolver
  },
  Post: {
    post: actionResolvers.FindUniquePostResolver,
    findFirstPost: actionResolvers.FindFirstPostResolver,
    posts: actionResolvers.FindManyPostResolver,
    createPost: actionResolvers.CreatePostResolver,
    createManyPost: actionResolvers.CreateManyPostResolver,
    deletePost: actionResolvers.DeletePostResolver,
    updatePost: actionResolvers.UpdatePostResolver,
    deleteManyPost: actionResolvers.DeleteManyPostResolver,
    updateManyPost: actionResolvers.UpdateManyPostResolver,
    upsertPost: actionResolvers.UpsertPostResolver,
    aggregatePost: actionResolvers.AggregatePostResolver,
    groupByPost: actionResolvers.GroupByPostResolver
  }
};
const crudResolversInfo = {
  User: [\\"user\\", \\"findFirstUser\\", \\"users\\", \\"createUser\\", \\"createManyUser\\", \\"deleteUser\\", \\"updateUser\\", \\"deleteManyUser\\", \\"updateManyUser\\", \\"upsertUser\\", \\"aggregateUser\\", \\"groupByUser\\"],
  Post: [\\"post\\", \\"findFirstPost\\", \\"posts\\", \\"createPost\\", \\"createManyPost\\", \\"deletePost\\", \\"updatePost\\", \\"deleteManyPost\\", \\"updateManyPost\\", \\"upsertPost\\", \\"aggregatePost\\", \\"groupByPost\\"]
};
const argsInfo = {
  FindUniqueUserArgs: [\\"where\\"],
  FindFirstUserArgs: [\\"where\\", \\"orderBy\\", \\"cursor\\", \\"take\\", \\"skip\\", \\"distinct\\"],
  FindManyUserArgs: [\\"where\\", \\"orderBy\\", \\"cursor\\", \\"take\\", \\"skip\\", \\"distinct\\"],
  CreateUserArgs: [\\"data\\"],
  CreateManyUserArgs: [\\"data\\", \\"skipDuplicates\\"],
  DeleteUserArgs: [\\"where\\"],
  UpdateUserArgs: [\\"data\\", \\"where\\"],
  DeleteManyUserArgs: [\\"where\\"],
  UpdateManyUserArgs: [\\"data\\", \\"where\\"],
  UpsertUserArgs: [\\"where\\", \\"create\\", \\"update\\"],
  AggregateUserArgs: [\\"where\\", \\"orderBy\\", \\"cursor\\", \\"take\\", \\"skip\\"],
  GroupByUserArgs: [\\"where\\", \\"orderBy\\", \\"by\\", \\"having\\", \\"take\\", \\"skip\\"],
  FindUniquePostArgs: [\\"where\\"],
  FindFirstPostArgs: [\\"where\\", \\"orderBy\\", \\"cursor\\", \\"take\\", \\"skip\\", \\"distinct\\"],
  FindManyPostArgs: [\\"where\\", \\"orderBy\\", \\"cursor\\", \\"take\\", \\"skip\\", \\"distinct\\"],
  CreatePostArgs: [\\"data\\"],
  CreateManyPostArgs: [\\"data\\", \\"skipDuplicates\\"],
  DeletePostArgs: [\\"where\\"],
  UpdatePostArgs: [\\"data\\", \\"where\\"],
  DeleteManyPostArgs: [\\"where\\"],
  UpdateManyPostArgs: [\\"data\\", \\"where\\"],
  UpsertPostArgs: [\\"where\\", \\"create\\", \\"update\\"],
  AggregatePostArgs: [\\"where\\", \\"orderBy\\", \\"cursor\\", \\"take\\", \\"skip\\"],
  GroupByPostArgs: [\\"where\\", \\"orderBy\\", \\"by\\", \\"having\\", \\"take\\", \\"skip\\"]
};

type ResolverModelNames = keyof typeof crudResolversMap;

type ModelResolverActionNames<
  TModel extends ResolverModelNames
  > = keyof typeof crudResolversMap[TModel][\\"prototype\\"];

export type ResolverActionsConfig<
  TModel extends ResolverModelNames
  > = Partial<Record<ModelResolverActionNames<TModel> | \\"_all\\", MethodDecorator[]>>;

export type ResolversEnhanceMap = {
  [TModel in ResolverModelNames]?: ResolverActionsConfig<TModel>;
};

export function applyResolversEnhanceMap(
  resolversEnhanceMap: ResolversEnhanceMap,
) {
  for (const resolversEnhanceMapKey of Object.keys(resolversEnhanceMap)) {
    const modelName = resolversEnhanceMapKey as keyof typeof resolversEnhanceMap;
    const crudTarget = crudResolversMap[modelName].prototype;
    const resolverActionsConfig = resolversEnhanceMap[modelName]!;
    const actionResolversConfig = actionResolversMap[modelName];
    if (resolverActionsConfig._all) {
      const allActionsDecorators = resolverActionsConfig._all;
      const resolverActionNames = crudResolversInfo[modelName as keyof typeof crudResolversInfo];
      for (const resolverActionName of resolverActionNames) {
        const actionTarget = (actionResolversConfig[
          resolverActionName as keyof typeof actionResolversConfig
        ] as Function).prototype;
        for (const allActionsDecorator of allActionsDecorators) {
          allActionsDecorator(
            crudTarget,
            resolverActionName,
            Object.getOwnPropertyDescriptor(crudTarget, resolverActionName)!,
          );
          allActionsDecorator(
            actionTarget,
            resolverActionName,
            Object.getOwnPropertyDescriptor(actionTarget, resolverActionName)!,
          );
        }
      }
    }
    const resolverActionsToApply = Object.keys(resolverActionsConfig).filter(
      it => it !== \\"_all\\"
    );
    for (const resolverActionName of resolverActionsToApply) {
      const decorators = resolverActionsConfig[
        resolverActionName as keyof typeof resolverActionsConfig
      ] as MethodDecorator[];
      const actionTarget = (actionResolversConfig[
        resolverActionName as keyof typeof actionResolversConfig
      ] as Function).prototype;
      for (const decorator of decorators) {
        decorator(
          crudTarget,
          resolverActionName,
          Object.getOwnPropertyDescriptor(crudTarget, resolverActionName)!,
        );
        decorator(
          actionTarget,
          resolverActionName,
          Object.getOwnPropertyDescriptor(actionTarget, resolverActionName)!,
        );
      }
    }
  }
}

type ArgsTypesNames = keyof typeof argsTypes;

type ArgFieldNames<TArgsType extends ArgsTypesNames> = Exclude<
  keyof typeof argsTypes[TArgsType][\\"prototype\\"],
  number | symbol
>;

type ArgFieldsConfig<
  TArgsType extends ArgsTypesNames
  > = FieldsConfig<ArgFieldNames<TArgsType>>;

export type ArgConfig<TArgsType extends ArgsTypesNames> = {
  class?: ClassDecorator[];
  fields?: ArgFieldsConfig<TArgsType>;
};

export type ArgsTypesEnhanceMap = {
  [TArgsType in ArgsTypesNames]?: ArgConfig<TArgsType>;
};

export function applyArgsTypesEnhanceMap(
  argsTypesEnhanceMap: ArgsTypesEnhanceMap,
) {
  for (const argsTypesEnhanceMapKey of Object.keys(argsTypesEnhanceMap)) {
    const argsTypeName = argsTypesEnhanceMapKey as keyof typeof argsTypesEnhanceMap;
    const typeConfig = argsTypesEnhanceMap[argsTypeName]!;
    const typeClass = argsTypes[argsTypeName];
    const typeTarget = typeClass.prototype;
    applyTypeClassEnhanceConfig(
      typeConfig,
      typeClass,
      typeTarget,
      argsInfo[argsTypeName as keyof typeof argsInfo],
    );
  }
}

type TypeConfig = {
  class?: ClassDecorator[];
  fields?: FieldsConfig;
};

type FieldsConfig<TTypeKeys extends string = string> = Partial<
  Record<TTypeKeys | \\"_all\\", PropertyDecorator[]>
>;

function applyTypeClassEnhanceConfig<
  TEnhanceConfig extends TypeConfig,
  TType extends object
>(
  enhanceConfig: TEnhanceConfig,
  typeClass: ClassType<TType>,
  typePrototype: TType,
  typeFieldNames: string[]
) {
  if (enhanceConfig.class) {
    for (const decorator of enhanceConfig.class) {
      decorator(typeClass);
    }
  }
  if (enhanceConfig.fields) {
    if (enhanceConfig.fields._all) {
      const allFieldsDecorators = enhanceConfig.fields._all;
      for (const typeFieldName of typeFieldNames) {
        for (const allFieldsDecorator of allFieldsDecorators) {
          allFieldsDecorator(typePrototype, typeFieldName);
        }
      }
    }
    const configFieldsToApply = Object.keys(enhanceConfig.fields).filter(
      it => it !== \\"_all\\"
    );
    for (const typeFieldName of configFieldsToApply) {
      const fieldDecorators = enhanceConfig.fields[typeFieldName]!;
      for (const fieldDecorator of fieldDecorators) {
        fieldDecorator(typePrototype, typeFieldName);
      }
    }
  }
}

const modelsInfo = {
  User: [\\"id\\", \\"email\\"],
  Post: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"authorId\\", \\"metadata\\"]
};

type ModelNames = keyof typeof models;

type ModelFieldNames<TModel extends ModelNames> = Exclude<
  keyof typeof models[TModel][\\"prototype\\"],
  number | symbol
>;

type ModelFieldsConfig<TModel extends ModelNames> = FieldsConfig<
  ModelFieldNames<TModel>
>;

export type ModelConfig<TModel extends ModelNames> = {
  class?: ClassDecorator[];
  fields?: ModelFieldsConfig<TModel>;
};

export type ModelsEnhanceMap = {
  [TModel in ModelNames]?: ModelConfig<TModel>;
};

export function applyModelsEnhanceMap(modelsEnhanceMap: ModelsEnhanceMap) {
  for (const modelsEnhanceMapKey of Object.keys(modelsEnhanceMap)) {
    const modelName = modelsEnhanceMapKey as keyof typeof modelsEnhanceMap;
    const modelConfig = modelsEnhanceMap[modelName]!;
    const modelClass = models[modelName];
    const modelTarget = modelClass.prototype;
    applyTypeClassEnhanceConfig(
      modelConfig,
      modelClass,
      modelTarget,
      modelsInfo[modelName as keyof typeof modelsInfo],
    );
  }
}

const outputsInfo = {
  AggregateUser: [\\"_count\\", \\"_avg\\", \\"_sum\\", \\"_min\\", \\"_max\\"],
  UserGroupBy: [\\"id\\", \\"email\\", \\"_count\\", \\"_avg\\", \\"_sum\\", \\"_min\\", \\"_max\\"],
  AggregatePost: [\\"_count\\", \\"_avg\\", \\"_sum\\", \\"_min\\", \\"_max\\"],
  PostGroupBy: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"authorId\\", \\"metadata\\", \\"_count\\", \\"_avg\\", \\"_sum\\", \\"_min\\", \\"_max\\"],
  AffectedRowsOutput: [\\"count\\"],
  UserCount: [\\"posts\\"],
  UserCountAggregate: [\\"id\\", \\"email\\", \\"_all\\"],
  UserAvgAggregate: [\\"id\\"],
  UserSumAggregate: [\\"id\\"],
  UserMinAggregate: [\\"id\\", \\"email\\"],
  UserMaxAggregate: [\\"id\\", \\"email\\"],
  PostCountAggregate: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"authorId\\", \\"metadata\\", \\"_all\\"],
  PostAvgAggregate: [\\"authorId\\"],
  PostSumAggregate: [\\"authorId\\"],
  PostMinAggregate: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"authorId\\"],
  PostMaxAggregate: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"authorId\\"]
};

type OutputTypesNames = keyof typeof outputTypes;

type OutputTypeFieldNames<TOutput extends OutputTypesNames> = Exclude<
  keyof typeof outputTypes[TOutput][\\"prototype\\"],
  number | symbol
>;

type OutputTypeFieldsConfig<
  TOutput extends OutputTypesNames
  > = FieldsConfig<OutputTypeFieldNames<TOutput>>;

export type OutputTypeConfig<TOutput extends OutputTypesNames> = {
  class?: ClassDecorator[];
  fields?: OutputTypeFieldsConfig<TOutput>;
};

export type OutputTypesEnhanceMap = {
  [TOutput in OutputTypesNames]?: OutputTypeConfig<TOutput>;
};

export function applyOutputTypesEnhanceMap(
  outputTypesEnhanceMap: OutputTypesEnhanceMap,
) {
  for (const outputTypeEnhanceMapKey of Object.keys(outputTypesEnhanceMap)) {
    const outputTypeName = outputTypeEnhanceMapKey as keyof typeof outputTypesEnhanceMap;
    const typeConfig = outputTypesEnhanceMap[outputTypeName]!;
    const typeClass = outputTypes[outputTypeName];
    const typeTarget = typeClass.prototype;
    applyTypeClassEnhanceConfig(
      typeConfig,
      typeClass,
      typeTarget,
      outputsInfo[outputTypeName as keyof typeof outputsInfo],
    );
  }
}

const inputsInfo = {
  UserWhereInput: [\\"AND\\", \\"OR\\", \\"NOT\\", \\"id\\", \\"email\\", \\"posts\\"],
  UserOrderByWithRelationInput: [\\"id\\", \\"email\\", \\"posts\\"],
  UserWhereUniqueInput: [\\"id\\", \\"email\\"],
  UserOrderByWithAggregationInput: [\\"id\\", \\"email\\", \\"_count\\", \\"_avg\\", \\"_max\\", \\"_min\\", \\"_sum\\"],
  UserScalarWhereWithAggregatesInput: [\\"AND\\", \\"OR\\", \\"NOT\\", \\"id\\", \\"email\\"],
  PostWhereInput: [\\"AND\\", \\"OR\\", \\"NOT\\", \\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"author\\", \\"authorId\\", \\"metadata\\"],
  PostOrderByWithRelationInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"author\\", \\"authorId\\", \\"metadata\\"],
  PostWhereUniqueInput: [\\"uuid\\"],
  PostOrderByWithAggregationInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"authorId\\", \\"metadata\\", \\"_count\\", \\"_avg\\", \\"_max\\", \\"_min\\", \\"_sum\\"],
  PostScalarWhereWithAggregatesInput: [\\"AND\\", \\"OR\\", \\"NOT\\", \\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"authorId\\", \\"metadata\\"],
  UserCreateInput: [\\"email\\", \\"posts\\"],
  UserUpdateInput: [\\"email\\", \\"posts\\"],
  UserCreateManyInput: [\\"id\\", \\"email\\"],
  UserUpdateManyMutationInput: [\\"email\\"],
  PostCreateInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"metadata\\", \\"author\\"],
  PostUpdateInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"metadata\\", \\"author\\"],
  PostCreateManyInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"authorId\\", \\"metadata\\"],
  PostUpdateManyMutationInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"metadata\\"],
  IntFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"not\\"],
  StringFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"contains\\", \\"startsWith\\", \\"endsWith\\", \\"mode\\", \\"not\\"],
  PostListRelationFilter: [\\"every\\", \\"some\\", \\"none\\"],
  PostOrderByRelationAggregateInput: [\\"_count\\"],
  UserCountOrderByAggregateInput: [\\"id\\", \\"email\\"],
  UserAvgOrderByAggregateInput: [\\"id\\"],
  UserMaxOrderByAggregateInput: [\\"id\\", \\"email\\"],
  UserMinOrderByAggregateInput: [\\"id\\", \\"email\\"],
  UserSumOrderByAggregateInput: [\\"id\\"],
  IntWithAggregatesFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"not\\", \\"_count\\", \\"_avg\\", \\"_sum\\", \\"_min\\", \\"_max\\"],
  StringWithAggregatesFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"contains\\", \\"startsWith\\", \\"endsWith\\", \\"mode\\", \\"not\\", \\"_count\\", \\"_min\\", \\"_max\\"],
  DateTimeFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"not\\"],
  BoolFilter: [\\"equals\\", \\"not\\"],
  StringNullableFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"contains\\", \\"startsWith\\", \\"endsWith\\", \\"mode\\", \\"not\\"],
  UserRelationFilter: [\\"is\\", \\"isNot\\"],
  JsonFilter: [\\"equals\\", \\"not\\"],
  PostCountOrderByAggregateInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"authorId\\", \\"metadata\\"],
  PostAvgOrderByAggregateInput: [\\"authorId\\"],
  PostMaxOrderByAggregateInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"authorId\\"],
  PostMinOrderByAggregateInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"authorId\\"],
  PostSumOrderByAggregateInput: [\\"authorId\\"],
  DateTimeWithAggregatesFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"not\\", \\"_count\\", \\"_min\\", \\"_max\\"],
  BoolWithAggregatesFilter: [\\"equals\\", \\"not\\", \\"_count\\", \\"_min\\", \\"_max\\"],
  StringNullableWithAggregatesFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"contains\\", \\"startsWith\\", \\"endsWith\\", \\"mode\\", \\"not\\", \\"_count\\", \\"_min\\", \\"_max\\"],
  JsonWithAggregatesFilter: [\\"equals\\", \\"not\\", \\"_count\\", \\"_min\\", \\"_max\\"],
  PostCreateNestedManyWithoutAuthorInput: [\\"create\\", \\"connectOrCreate\\", \\"createMany\\", \\"connect\\"],
  StringFieldUpdateOperationsInput: [\\"set\\"],
  PostUpdateManyWithoutAuthorInput: [\\"create\\", \\"connectOrCreate\\", \\"upsert\\", \\"createMany\\", \\"connect\\", \\"set\\", \\"disconnect\\", \\"delete\\", \\"update\\", \\"updateMany\\", \\"deleteMany\\"],
  IntFieldUpdateOperationsInput: [\\"set\\", \\"increment\\", \\"decrement\\", \\"multiply\\", \\"divide\\"],
  UserCreateNestedOneWithoutPostsInput: [\\"create\\", \\"connectOrCreate\\", \\"connect\\"],
  DateTimeFieldUpdateOperationsInput: [\\"set\\"],
  BoolFieldUpdateOperationsInput: [\\"set\\"],
  NullableStringFieldUpdateOperationsInput: [\\"set\\"],
  UserUpdateOneRequiredWithoutPostsInput: [\\"create\\", \\"connectOrCreate\\", \\"upsert\\", \\"connect\\", \\"update\\"],
  NestedIntFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"not\\"],
  NestedStringFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"contains\\", \\"startsWith\\", \\"endsWith\\", \\"not\\"],
  NestedIntWithAggregatesFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"not\\", \\"_count\\", \\"_avg\\", \\"_sum\\", \\"_min\\", \\"_max\\"],
  NestedFloatFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"not\\"],
  NestedStringWithAggregatesFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"contains\\", \\"startsWith\\", \\"endsWith\\", \\"not\\", \\"_count\\", \\"_min\\", \\"_max\\"],
  NestedDateTimeFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"not\\"],
  NestedBoolFilter: [\\"equals\\", \\"not\\"],
  NestedStringNullableFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"contains\\", \\"startsWith\\", \\"endsWith\\", \\"not\\"],
  NestedDateTimeWithAggregatesFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"not\\", \\"_count\\", \\"_min\\", \\"_max\\"],
  NestedBoolWithAggregatesFilter: [\\"equals\\", \\"not\\", \\"_count\\", \\"_min\\", \\"_max\\"],
  NestedStringNullableWithAggregatesFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"contains\\", \\"startsWith\\", \\"endsWith\\", \\"not\\", \\"_count\\", \\"_min\\", \\"_max\\"],
  NestedIntNullableFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"not\\"],
  NestedJsonFilter: [\\"equals\\", \\"not\\"],
  PostCreateWithoutAuthorInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"metadata\\"],
  PostCreateOrConnectWithoutAuthorInput: [\\"where\\", \\"create\\"],
  PostCreateManyAuthorInputEnvelope: [\\"data\\", \\"skipDuplicates\\"],
  PostUpsertWithWhereUniqueWithoutAuthorInput: [\\"where\\", \\"update\\", \\"create\\"],
  PostUpdateWithWhereUniqueWithoutAuthorInput: [\\"where\\", \\"data\\"],
  PostUpdateManyWithWhereWithoutAuthorInput: [\\"where\\", \\"data\\"],
  PostScalarWhereInput: [\\"AND\\", \\"OR\\", \\"NOT\\", \\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"authorId\\", \\"metadata\\"],
  UserCreateWithoutPostsInput: [\\"email\\"],
  UserCreateOrConnectWithoutPostsInput: [\\"where\\", \\"create\\"],
  UserUpsertWithoutPostsInput: [\\"update\\", \\"create\\"],
  UserUpdateWithoutPostsInput: [\\"email\\"],
  PostCreateManyAuthorInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"metadata\\"],
  PostUpdateWithoutAuthorInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"metadata\\"]
};

type InputTypesNames = keyof typeof inputTypes;

type InputTypeFieldNames<TInput extends InputTypesNames> = Exclude<
  keyof typeof inputTypes[TInput][\\"prototype\\"],
  number | symbol
>;

type InputTypeFieldsConfig<
  TInput extends InputTypesNames
  > = FieldsConfig<InputTypeFieldNames<TInput>>;

export type InputTypeConfig<TInput extends InputTypesNames> = {
  class?: ClassDecorator[];
  fields?: InputTypeFieldsConfig<TInput>;
};

export type InputTypesEnhanceMap = {
  [TInput in InputTypesNames]?: InputTypeConfig<TInput>;
};

export function applyInputTypesEnhanceMap(
  inputTypesEnhanceMap: InputTypesEnhanceMap,
) {
  for (const inputTypeEnhanceMapKey of Object.keys(inputTypesEnhanceMap)) {
    const inputTypeName = inputTypeEnhanceMapKey as keyof typeof inputTypesEnhanceMap;
    const typeConfig = inputTypesEnhanceMap[inputTypeName]!;
    const typeClass = inputTypes[inputTypeName];
    const typeTarget = typeClass.prototype;
    applyTypeClassEnhanceConfig(
      typeConfig,
      typeClass,
      typeTarget,
      inputsInfo[inputTypeName as keyof typeof inputsInfo],
    );
  }
}

"
`;

exports[`emitOnly generator option when only 'crudResolvers' is set should generate proper files, enhance and index: mainIndex 1`] = `
"import * as crudResolversImport from \\"./resolvers/crud/resolvers-crud.index\\";
import { NonEmptyArray } from \\"type-graphql\\";

export * from \\"./enums\\";
export * from \\"./models\\";
export * from \\"./resolvers/crud\\";

export const crudResolvers = Object.values(crudResolversImport) as unknown as NonEmptyArray<Function>;

export * from \\"./resolvers/inputs\\";
export * from \\"./resolvers/outputs\\";
export * from \\"./enhance\\";
export * from \\"./scalars\\";

export const resolvers = [
  ...crudResolvers,

] as unknown as NonEmptyArray<Function>;
"
`;

exports[`emitOnly generator option when only 'crudResolvers' is set should generate proper files, enhance and index: structure 1`] = `
"
[type-graphql]
  enhance.ts
  [enums]
    JsonNullValueFilter.ts
    JsonNullValueInput.ts
    PostScalarFieldEnum.ts
    QueryMode.ts
    SortOrder.ts
    UserScalarFieldEnum.ts
    index.ts
  helpers.ts
  index.ts
  [models]
    Post.ts
    User.ts
    index.ts
  [resolvers]
    [crud]
      [Post]
        AggregatePostResolver.ts
        CreateManyPostResolver.ts
        CreatePostResolver.ts
        DeleteManyPostResolver.ts
        DeletePostResolver.ts
        FindFirstPostResolver.ts
        FindManyPostResolver.ts
        FindUniquePostResolver.ts
        GroupByPostResolver.ts
        PostCrudResolver.ts
        UpdateManyPostResolver.ts
        UpdatePostResolver.ts
        UpsertPostResolver.ts
        [args]
          AggregatePostArgs.ts
          CreateManyPostArgs.ts
          CreatePostArgs.ts
          DeleteManyPostArgs.ts
          DeletePostArgs.ts
          FindFirstPostArgs.ts
          FindManyPostArgs.ts
          FindUniquePostArgs.ts
          GroupByPostArgs.ts
          UpdateManyPostArgs.ts
          UpdatePostArgs.ts
          UpsertPostArgs.ts
          index.ts
      [User]
        AggregateUserResolver.ts
        CreateManyUserResolver.ts
        CreateUserResolver.ts
        DeleteManyUserResolver.ts
        DeleteUserResolver.ts
        FindFirstUserResolver.ts
        FindManyUserResolver.ts
        FindUniqueUserResolver.ts
        GroupByUserResolver.ts
        UpdateManyUserResolver.ts
        UpdateUserResolver.ts
        UpsertUserResolver.ts
        UserCrudResolver.ts
        [args]
          AggregateUserArgs.ts
          CreateManyUserArgs.ts
          CreateUserArgs.ts
          DeleteManyUserArgs.ts
          DeleteUserArgs.ts
          FindFirstUserArgs.ts
          FindManyUserArgs.ts
          FindUniqueUserArgs.ts
          GroupByUserArgs.ts
          UpdateManyUserArgs.ts
          UpdateUserArgs.ts
          UpsertUserArgs.ts
          index.ts
      args.index.ts
      index.ts
      resolvers-actions.index.ts
      resolvers-crud.index.ts
    [inputs]
      BoolFieldUpdateOperationsInput.ts
      BoolFilter.ts
      BoolWithAggregatesFilter.ts
      DateTimeFieldUpdateOperationsInput.ts
      DateTimeFilter.ts
      DateTimeWithAggregatesFilter.ts
      IntFieldUpdateOperationsInput.ts
      IntFilter.ts
      IntWithAggregatesFilter.ts
      JsonFilter.ts
      JsonWithAggregatesFilter.ts
      NestedBoolFilter.ts
      NestedBoolWithAggregatesFilter.ts
      NestedDateTimeFilter.ts
      NestedDateTimeWithAggregatesFilter.ts
      NestedFloatFilter.ts
      NestedIntFilter.ts
      NestedIntNullableFilter.ts
      NestedIntWithAggregatesFilter.ts
      NestedJsonFilter.ts
      NestedStringFilter.ts
      NestedStringNullableFilter.ts
      NestedStringNullableWithAggregatesFilter.ts
      NestedStringWithAggregatesFilter.ts
      NullableStringFieldUpdateOperationsInput.ts
      PostAvgOrderByAggregateInput.ts
      PostCountOrderByAggregateInput.ts
      PostCreateInput.ts
      PostCreateManyAuthorInput.ts
      PostCreateManyAuthorInputEnvelope.ts
      PostCreateManyInput.ts
      PostCreateNestedManyWithoutAuthorInput.ts
      PostCreateOrConnectWithoutAuthorInput.ts
      PostCreateWithoutAuthorInput.ts
      PostListRelationFilter.ts
      PostMaxOrderByAggregateInput.ts
      PostMinOrderByAggregateInput.ts
      PostOrderByRelationAggregateInput.ts
      PostOrderByWithAggregationInput.ts
      PostOrderByWithRelationInput.ts
      PostScalarWhereInput.ts
      PostScalarWhereWithAggregatesInput.ts
      PostSumOrderByAggregateInput.ts
      PostUpdateInput.ts
      PostUpdateManyMutationInput.ts
      PostUpdateManyWithWhereWithoutAuthorInput.ts
      PostUpdateManyWithoutAuthorInput.ts
      PostUpdateWithWhereUniqueWithoutAuthorInput.ts
      PostUpdateWithoutAuthorInput.ts
      PostUpsertWithWhereUniqueWithoutAuthorInput.ts
      PostWhereInput.ts
      PostWhereUniqueInput.ts
      StringFieldUpdateOperationsInput.ts
      StringFilter.ts
      StringNullableFilter.ts
      StringNullableWithAggregatesFilter.ts
      StringWithAggregatesFilter.ts
      UserAvgOrderByAggregateInput.ts
      UserCountOrderByAggregateInput.ts
      UserCreateInput.ts
      UserCreateManyInput.ts
      UserCreateNestedOneWithoutPostsInput.ts
      UserCreateOrConnectWithoutPostsInput.ts
      UserCreateWithoutPostsInput.ts
      UserMaxOrderByAggregateInput.ts
      UserMinOrderByAggregateInput.ts
      UserOrderByWithAggregationInput.ts
      UserOrderByWithRelationInput.ts
      UserRelationFilter.ts
      UserScalarWhereWithAggregatesInput.ts
      UserSumOrderByAggregateInput.ts
      UserUpdateInput.ts
      UserUpdateManyMutationInput.ts
      UserUpdateOneRequiredWithoutPostsInput.ts
      UserUpdateWithoutPostsInput.ts
      UserUpsertWithoutPostsInput.ts
      UserWhereInput.ts
      UserWhereUniqueInput.ts
      index.ts
    [outputs]
      AffectedRowsOutput.ts
      AggregatePost.ts
      AggregateUser.ts
      PostAvgAggregate.ts
      PostCountAggregate.ts
      PostGroupBy.ts
      PostMaxAggregate.ts
      PostMinAggregate.ts
      PostSumAggregate.ts
      UserAvgAggregate.ts
      UserCount.ts
      UserCountAggregate.ts
      UserGroupBy.ts
      UserMaxAggregate.ts
      UserMinAggregate.ts
      UserSumAggregate.ts
      index.ts
  scalars.ts
"
`;

exports[`emitOnly generator option when only 'enums' is set should generate proper files, enhance and index: enhance 1`] = `
"import { ClassType } from \\"type-graphql\\";
"
`;

exports[`emitOnly generator option when only 'enums' is set should generate proper files, enhance and index: mainIndex 1`] = `
"import { NonEmptyArray } from \\"type-graphql\\";

export * from \\"./enums\\";
export * from \\"./enhance\\";
export * from \\"./scalars\\";
"
`;

exports[`emitOnly generator option when only 'enums' is set should generate proper files, enhance and index: structure 1`] = `
"
[type-graphql]
  enhance.ts
  [enums]
    JsonNullValueFilter.ts
    JsonNullValueInput.ts
    PostScalarFieldEnum.ts
    QueryMode.ts
    SortOrder.ts
    UserScalarFieldEnum.ts
    index.ts
  helpers.ts
  index.ts
  scalars.ts
"
`;

exports[`emitOnly generator option when only 'inputs' is set should generate proper files, enhance and index: enhance 1`] = `
"import { ClassType } from \\"type-graphql\\";
import * as inputTypes from \\"./resolvers/inputs\\";

type TypeConfig = {
  class?: ClassDecorator[];
  fields?: FieldsConfig;
};

type FieldsConfig<TTypeKeys extends string = string> = Partial<
  Record<TTypeKeys | \\"_all\\", PropertyDecorator[]>
>;

function applyTypeClassEnhanceConfig<
  TEnhanceConfig extends TypeConfig,
  TType extends object
>(
  enhanceConfig: TEnhanceConfig,
  typeClass: ClassType<TType>,
  typePrototype: TType,
  typeFieldNames: string[]
) {
  if (enhanceConfig.class) {
    for (const decorator of enhanceConfig.class) {
      decorator(typeClass);
    }
  }
  if (enhanceConfig.fields) {
    if (enhanceConfig.fields._all) {
      const allFieldsDecorators = enhanceConfig.fields._all;
      for (const typeFieldName of typeFieldNames) {
        for (const allFieldsDecorator of allFieldsDecorators) {
          allFieldsDecorator(typePrototype, typeFieldName);
        }
      }
    }
    const configFieldsToApply = Object.keys(enhanceConfig.fields).filter(
      it => it !== \\"_all\\"
    );
    for (const typeFieldName of configFieldsToApply) {
      const fieldDecorators = enhanceConfig.fields[typeFieldName]!;
      for (const fieldDecorator of fieldDecorators) {
        fieldDecorator(typePrototype, typeFieldName);
      }
    }
  }
}

const inputsInfo = {
  UserWhereInput: [\\"AND\\", \\"OR\\", \\"NOT\\", \\"id\\", \\"email\\", \\"posts\\"],
  UserOrderByWithRelationInput: [\\"id\\", \\"email\\", \\"posts\\"],
  UserWhereUniqueInput: [\\"id\\", \\"email\\"],
  UserOrderByWithAggregationInput: [\\"id\\", \\"email\\", \\"_count\\", \\"_avg\\", \\"_max\\", \\"_min\\", \\"_sum\\"],
  UserScalarWhereWithAggregatesInput: [\\"AND\\", \\"OR\\", \\"NOT\\", \\"id\\", \\"email\\"],
  PostWhereInput: [\\"AND\\", \\"OR\\", \\"NOT\\", \\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"author\\", \\"authorId\\", \\"metadata\\"],
  PostOrderByWithRelationInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"author\\", \\"authorId\\", \\"metadata\\"],
  PostWhereUniqueInput: [\\"uuid\\"],
  PostOrderByWithAggregationInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"authorId\\", \\"metadata\\", \\"_count\\", \\"_avg\\", \\"_max\\", \\"_min\\", \\"_sum\\"],
  PostScalarWhereWithAggregatesInput: [\\"AND\\", \\"OR\\", \\"NOT\\", \\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"authorId\\", \\"metadata\\"],
  UserCreateInput: [\\"email\\", \\"posts\\"],
  UserUpdateInput: [\\"email\\", \\"posts\\"],
  UserCreateManyInput: [\\"id\\", \\"email\\"],
  UserUpdateManyMutationInput: [\\"email\\"],
  PostCreateInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"metadata\\", \\"author\\"],
  PostUpdateInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"metadata\\", \\"author\\"],
  PostCreateManyInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"authorId\\", \\"metadata\\"],
  PostUpdateManyMutationInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"metadata\\"],
  IntFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"not\\"],
  StringFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"contains\\", \\"startsWith\\", \\"endsWith\\", \\"mode\\", \\"not\\"],
  PostListRelationFilter: [\\"every\\", \\"some\\", \\"none\\"],
  PostOrderByRelationAggregateInput: [\\"_count\\"],
  UserCountOrderByAggregateInput: [\\"id\\", \\"email\\"],
  UserAvgOrderByAggregateInput: [\\"id\\"],
  UserMaxOrderByAggregateInput: [\\"id\\", \\"email\\"],
  UserMinOrderByAggregateInput: [\\"id\\", \\"email\\"],
  UserSumOrderByAggregateInput: [\\"id\\"],
  IntWithAggregatesFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"not\\", \\"_count\\", \\"_avg\\", \\"_sum\\", \\"_min\\", \\"_max\\"],
  StringWithAggregatesFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"contains\\", \\"startsWith\\", \\"endsWith\\", \\"mode\\", \\"not\\", \\"_count\\", \\"_min\\", \\"_max\\"],
  DateTimeFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"not\\"],
  BoolFilter: [\\"equals\\", \\"not\\"],
  StringNullableFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"contains\\", \\"startsWith\\", \\"endsWith\\", \\"mode\\", \\"not\\"],
  UserRelationFilter: [\\"is\\", \\"isNot\\"],
  JsonFilter: [\\"equals\\", \\"not\\"],
  PostCountOrderByAggregateInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"authorId\\", \\"metadata\\"],
  PostAvgOrderByAggregateInput: [\\"authorId\\"],
  PostMaxOrderByAggregateInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"authorId\\"],
  PostMinOrderByAggregateInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"authorId\\"],
  PostSumOrderByAggregateInput: [\\"authorId\\"],
  DateTimeWithAggregatesFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"not\\", \\"_count\\", \\"_min\\", \\"_max\\"],
  BoolWithAggregatesFilter: [\\"equals\\", \\"not\\", \\"_count\\", \\"_min\\", \\"_max\\"],
  StringNullableWithAggregatesFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"contains\\", \\"startsWith\\", \\"endsWith\\", \\"mode\\", \\"not\\", \\"_count\\", \\"_min\\", \\"_max\\"],
  JsonWithAggregatesFilter: [\\"equals\\", \\"not\\", \\"_count\\", \\"_min\\", \\"_max\\"],
  PostCreateNestedManyWithoutAuthorInput: [\\"create\\", \\"connectOrCreate\\", \\"createMany\\", \\"connect\\"],
  StringFieldUpdateOperationsInput: [\\"set\\"],
  PostUpdateManyWithoutAuthorInput: [\\"create\\", \\"connectOrCreate\\", \\"upsert\\", \\"createMany\\", \\"connect\\", \\"set\\", \\"disconnect\\", \\"delete\\", \\"update\\", \\"updateMany\\", \\"deleteMany\\"],
  IntFieldUpdateOperationsInput: [\\"set\\", \\"increment\\", \\"decrement\\", \\"multiply\\", \\"divide\\"],
  UserCreateNestedOneWithoutPostsInput: [\\"create\\", \\"connectOrCreate\\", \\"connect\\"],
  DateTimeFieldUpdateOperationsInput: [\\"set\\"],
  BoolFieldUpdateOperationsInput: [\\"set\\"],
  NullableStringFieldUpdateOperationsInput: [\\"set\\"],
  UserUpdateOneRequiredWithoutPostsInput: [\\"create\\", \\"connectOrCreate\\", \\"upsert\\", \\"connect\\", \\"update\\"],
  NestedIntFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"not\\"],
  NestedStringFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"contains\\", \\"startsWith\\", \\"endsWith\\", \\"not\\"],
  NestedIntWithAggregatesFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"not\\", \\"_count\\", \\"_avg\\", \\"_sum\\", \\"_min\\", \\"_max\\"],
  NestedFloatFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"not\\"],
  NestedStringWithAggregatesFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"contains\\", \\"startsWith\\", \\"endsWith\\", \\"not\\", \\"_count\\", \\"_min\\", \\"_max\\"],
  NestedDateTimeFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"not\\"],
  NestedBoolFilter: [\\"equals\\", \\"not\\"],
  NestedStringNullableFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"contains\\", \\"startsWith\\", \\"endsWith\\", \\"not\\"],
  NestedDateTimeWithAggregatesFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"not\\", \\"_count\\", \\"_min\\", \\"_max\\"],
  NestedBoolWithAggregatesFilter: [\\"equals\\", \\"not\\", \\"_count\\", \\"_min\\", \\"_max\\"],
  NestedStringNullableWithAggregatesFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"contains\\", \\"startsWith\\", \\"endsWith\\", \\"not\\", \\"_count\\", \\"_min\\", \\"_max\\"],
  NestedIntNullableFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"not\\"],
  NestedJsonFilter: [\\"equals\\", \\"not\\"],
  PostCreateWithoutAuthorInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"metadata\\"],
  PostCreateOrConnectWithoutAuthorInput: [\\"where\\", \\"create\\"],
  PostCreateManyAuthorInputEnvelope: [\\"data\\", \\"skipDuplicates\\"],
  PostUpsertWithWhereUniqueWithoutAuthorInput: [\\"where\\", \\"update\\", \\"create\\"],
  PostUpdateWithWhereUniqueWithoutAuthorInput: [\\"where\\", \\"data\\"],
  PostUpdateManyWithWhereWithoutAuthorInput: [\\"where\\", \\"data\\"],
  PostScalarWhereInput: [\\"AND\\", \\"OR\\", \\"NOT\\", \\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"authorId\\", \\"metadata\\"],
  UserCreateWithoutPostsInput: [\\"email\\"],
  UserCreateOrConnectWithoutPostsInput: [\\"where\\", \\"create\\"],
  UserUpsertWithoutPostsInput: [\\"update\\", \\"create\\"],
  UserUpdateWithoutPostsInput: [\\"email\\"],
  PostCreateManyAuthorInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"metadata\\"],
  PostUpdateWithoutAuthorInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"metadata\\"]
};

type InputTypesNames = keyof typeof inputTypes;

type InputTypeFieldNames<TInput extends InputTypesNames> = Exclude<
  keyof typeof inputTypes[TInput][\\"prototype\\"],
  number | symbol
>;

type InputTypeFieldsConfig<
  TInput extends InputTypesNames
  > = FieldsConfig<InputTypeFieldNames<TInput>>;

export type InputTypeConfig<TInput extends InputTypesNames> = {
  class?: ClassDecorator[];
  fields?: InputTypeFieldsConfig<TInput>;
};

export type InputTypesEnhanceMap = {
  [TInput in InputTypesNames]?: InputTypeConfig<TInput>;
};

export function applyInputTypesEnhanceMap(
  inputTypesEnhanceMap: InputTypesEnhanceMap,
) {
  for (const inputTypeEnhanceMapKey of Object.keys(inputTypesEnhanceMap)) {
    const inputTypeName = inputTypeEnhanceMapKey as keyof typeof inputTypesEnhanceMap;
    const typeConfig = inputTypesEnhanceMap[inputTypeName]!;
    const typeClass = inputTypes[inputTypeName];
    const typeTarget = typeClass.prototype;
    applyTypeClassEnhanceConfig(
      typeConfig,
      typeClass,
      typeTarget,
      inputsInfo[inputTypeName as keyof typeof inputsInfo],
    );
  }
}

"
`;

exports[`emitOnly generator option when only 'inputs' is set should generate proper files, enhance and index: mainIndex 1`] = `
"import { NonEmptyArray } from \\"type-graphql\\";

export * from \\"./enums\\";
export * from \\"./resolvers/inputs\\";
export * from \\"./enhance\\";
export * from \\"./scalars\\";
"
`;

exports[`emitOnly generator option when only 'inputs' is set should generate proper files, enhance and index: structure 1`] = `
"
[type-graphql]
  enhance.ts
  [enums]
    JsonNullValueFilter.ts
    JsonNullValueInput.ts
    PostScalarFieldEnum.ts
    QueryMode.ts
    SortOrder.ts
    UserScalarFieldEnum.ts
    index.ts
  helpers.ts
  index.ts
  [resolvers]
    [inputs]
      BoolFieldUpdateOperationsInput.ts
      BoolFilter.ts
      BoolWithAggregatesFilter.ts
      DateTimeFieldUpdateOperationsInput.ts
      DateTimeFilter.ts
      DateTimeWithAggregatesFilter.ts
      IntFieldUpdateOperationsInput.ts
      IntFilter.ts
      IntWithAggregatesFilter.ts
      JsonFilter.ts
      JsonWithAggregatesFilter.ts
      NestedBoolFilter.ts
      NestedBoolWithAggregatesFilter.ts
      NestedDateTimeFilter.ts
      NestedDateTimeWithAggregatesFilter.ts
      NestedFloatFilter.ts
      NestedIntFilter.ts
      NestedIntNullableFilter.ts
      NestedIntWithAggregatesFilter.ts
      NestedJsonFilter.ts
      NestedStringFilter.ts
      NestedStringNullableFilter.ts
      NestedStringNullableWithAggregatesFilter.ts
      NestedStringWithAggregatesFilter.ts
      NullableStringFieldUpdateOperationsInput.ts
      PostAvgOrderByAggregateInput.ts
      PostCountOrderByAggregateInput.ts
      PostCreateInput.ts
      PostCreateManyAuthorInput.ts
      PostCreateManyAuthorInputEnvelope.ts
      PostCreateManyInput.ts
      PostCreateNestedManyWithoutAuthorInput.ts
      PostCreateOrConnectWithoutAuthorInput.ts
      PostCreateWithoutAuthorInput.ts
      PostListRelationFilter.ts
      PostMaxOrderByAggregateInput.ts
      PostMinOrderByAggregateInput.ts
      PostOrderByRelationAggregateInput.ts
      PostOrderByWithAggregationInput.ts
      PostOrderByWithRelationInput.ts
      PostScalarWhereInput.ts
      PostScalarWhereWithAggregatesInput.ts
      PostSumOrderByAggregateInput.ts
      PostUpdateInput.ts
      PostUpdateManyMutationInput.ts
      PostUpdateManyWithWhereWithoutAuthorInput.ts
      PostUpdateManyWithoutAuthorInput.ts
      PostUpdateWithWhereUniqueWithoutAuthorInput.ts
      PostUpdateWithoutAuthorInput.ts
      PostUpsertWithWhereUniqueWithoutAuthorInput.ts
      PostWhereInput.ts
      PostWhereUniqueInput.ts
      StringFieldUpdateOperationsInput.ts
      StringFilter.ts
      StringNullableFilter.ts
      StringNullableWithAggregatesFilter.ts
      StringWithAggregatesFilter.ts
      UserAvgOrderByAggregateInput.ts
      UserCountOrderByAggregateInput.ts
      UserCreateInput.ts
      UserCreateManyInput.ts
      UserCreateNestedOneWithoutPostsInput.ts
      UserCreateOrConnectWithoutPostsInput.ts
      UserCreateWithoutPostsInput.ts
      UserMaxOrderByAggregateInput.ts
      UserMinOrderByAggregateInput.ts
      UserOrderByWithAggregationInput.ts
      UserOrderByWithRelationInput.ts
      UserRelationFilter.ts
      UserScalarWhereWithAggregatesInput.ts
      UserSumOrderByAggregateInput.ts
      UserUpdateInput.ts
      UserUpdateManyMutationInput.ts
      UserUpdateOneRequiredWithoutPostsInput.ts
      UserUpdateWithoutPostsInput.ts
      UserUpsertWithoutPostsInput.ts
      UserWhereInput.ts
      UserWhereUniqueInput.ts
      index.ts
  scalars.ts
"
`;

exports[`emitOnly generator option when only 'models' is set should generate proper files, enhance and index: enhance 1`] = `
"import { ClassType } from \\"type-graphql\\";
import * as models from \\"./models\\";

type TypeConfig = {
  class?: ClassDecorator[];
  fields?: FieldsConfig;
};

type FieldsConfig<TTypeKeys extends string = string> = Partial<
  Record<TTypeKeys | \\"_all\\", PropertyDecorator[]>
>;

function applyTypeClassEnhanceConfig<
  TEnhanceConfig extends TypeConfig,
  TType extends object
>(
  enhanceConfig: TEnhanceConfig,
  typeClass: ClassType<TType>,
  typePrototype: TType,
  typeFieldNames: string[]
) {
  if (enhanceConfig.class) {
    for (const decorator of enhanceConfig.class) {
      decorator(typeClass);
    }
  }
  if (enhanceConfig.fields) {
    if (enhanceConfig.fields._all) {
      const allFieldsDecorators = enhanceConfig.fields._all;
      for (const typeFieldName of typeFieldNames) {
        for (const allFieldsDecorator of allFieldsDecorators) {
          allFieldsDecorator(typePrototype, typeFieldName);
        }
      }
    }
    const configFieldsToApply = Object.keys(enhanceConfig.fields).filter(
      it => it !== \\"_all\\"
    );
    for (const typeFieldName of configFieldsToApply) {
      const fieldDecorators = enhanceConfig.fields[typeFieldName]!;
      for (const fieldDecorator of fieldDecorators) {
        fieldDecorator(typePrototype, typeFieldName);
      }
    }
  }
}

const modelsInfo = {
  User: [\\"id\\", \\"email\\"],
  Post: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"authorId\\", \\"metadata\\"]
};

type ModelNames = keyof typeof models;

type ModelFieldNames<TModel extends ModelNames> = Exclude<
  keyof typeof models[TModel][\\"prototype\\"],
  number | symbol
>;

type ModelFieldsConfig<TModel extends ModelNames> = FieldsConfig<
  ModelFieldNames<TModel>
>;

export type ModelConfig<TModel extends ModelNames> = {
  class?: ClassDecorator[];
  fields?: ModelFieldsConfig<TModel>;
};

export type ModelsEnhanceMap = {
  [TModel in ModelNames]?: ModelConfig<TModel>;
};

export function applyModelsEnhanceMap(modelsEnhanceMap: ModelsEnhanceMap) {
  for (const modelsEnhanceMapKey of Object.keys(modelsEnhanceMap)) {
    const modelName = modelsEnhanceMapKey as keyof typeof modelsEnhanceMap;
    const modelConfig = modelsEnhanceMap[modelName]!;
    const modelClass = models[modelName];
    const modelTarget = modelClass.prototype;
    applyTypeClassEnhanceConfig(
      modelConfig,
      modelClass,
      modelTarget,
      modelsInfo[modelName as keyof typeof modelsInfo],
    );
  }
}

"
`;

exports[`emitOnly generator option when only 'models' is set should generate proper files, enhance and index: mainIndex 1`] = `
"import { NonEmptyArray } from \\"type-graphql\\";

export * from \\"./enums\\";
export * from \\"./models\\";
export * from \\"./enhance\\";
export * from \\"./scalars\\";
"
`;

exports[`emitOnly generator option when only 'models' is set should generate proper files, enhance and index: structure 1`] = `
"
[type-graphql]
  enhance.ts
  [enums]
    JsonNullValueFilter.ts
    JsonNullValueInput.ts
    PostScalarFieldEnum.ts
    QueryMode.ts
    SortOrder.ts
    UserScalarFieldEnum.ts
    index.ts
  helpers.ts
  index.ts
  [models]
    Post.ts
    User.ts
    index.ts
  scalars.ts
"
`;

exports[`emitOnly generator option when only 'outputs' is set should generate proper files, enhance and index: enhance 1`] = `
"import { ClassType } from \\"type-graphql\\";
import * as outputTypes from \\"./resolvers/outputs\\";

type TypeConfig = {
  class?: ClassDecorator[];
  fields?: FieldsConfig;
};

type FieldsConfig<TTypeKeys extends string = string> = Partial<
  Record<TTypeKeys | \\"_all\\", PropertyDecorator[]>
>;

function applyTypeClassEnhanceConfig<
  TEnhanceConfig extends TypeConfig,
  TType extends object
>(
  enhanceConfig: TEnhanceConfig,
  typeClass: ClassType<TType>,
  typePrototype: TType,
  typeFieldNames: string[]
) {
  if (enhanceConfig.class) {
    for (const decorator of enhanceConfig.class) {
      decorator(typeClass);
    }
  }
  if (enhanceConfig.fields) {
    if (enhanceConfig.fields._all) {
      const allFieldsDecorators = enhanceConfig.fields._all;
      for (const typeFieldName of typeFieldNames) {
        for (const allFieldsDecorator of allFieldsDecorators) {
          allFieldsDecorator(typePrototype, typeFieldName);
        }
      }
    }
    const configFieldsToApply = Object.keys(enhanceConfig.fields).filter(
      it => it !== \\"_all\\"
    );
    for (const typeFieldName of configFieldsToApply) {
      const fieldDecorators = enhanceConfig.fields[typeFieldName]!;
      for (const fieldDecorator of fieldDecorators) {
        fieldDecorator(typePrototype, typeFieldName);
      }
    }
  }
}

const outputsInfo = {
  AggregateUser: [\\"_count\\", \\"_avg\\", \\"_sum\\", \\"_min\\", \\"_max\\"],
  UserGroupBy: [\\"id\\", \\"email\\", \\"_count\\", \\"_avg\\", \\"_sum\\", \\"_min\\", \\"_max\\"],
  AggregatePost: [\\"_count\\", \\"_avg\\", \\"_sum\\", \\"_min\\", \\"_max\\"],
  PostGroupBy: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"authorId\\", \\"metadata\\", \\"_count\\", \\"_avg\\", \\"_sum\\", \\"_min\\", \\"_max\\"],
  AffectedRowsOutput: [\\"count\\"],
  UserCount: [\\"posts\\"],
  UserCountAggregate: [\\"id\\", \\"email\\", \\"_all\\"],
  UserAvgAggregate: [\\"id\\"],
  UserSumAggregate: [\\"id\\"],
  UserMinAggregate: [\\"id\\", \\"email\\"],
  UserMaxAggregate: [\\"id\\", \\"email\\"],
  PostCountAggregate: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"authorId\\", \\"metadata\\", \\"_all\\"],
  PostAvgAggregate: [\\"authorId\\"],
  PostSumAggregate: [\\"authorId\\"],
  PostMinAggregate: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"authorId\\"],
  PostMaxAggregate: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"authorId\\"]
};

type OutputTypesNames = keyof typeof outputTypes;

type OutputTypeFieldNames<TOutput extends OutputTypesNames> = Exclude<
  keyof typeof outputTypes[TOutput][\\"prototype\\"],
  number | symbol
>;

type OutputTypeFieldsConfig<
  TOutput extends OutputTypesNames
  > = FieldsConfig<OutputTypeFieldNames<TOutput>>;

export type OutputTypeConfig<TOutput extends OutputTypesNames> = {
  class?: ClassDecorator[];
  fields?: OutputTypeFieldsConfig<TOutput>;
};

export type OutputTypesEnhanceMap = {
  [TOutput in OutputTypesNames]?: OutputTypeConfig<TOutput>;
};

export function applyOutputTypesEnhanceMap(
  outputTypesEnhanceMap: OutputTypesEnhanceMap,
) {
  for (const outputTypeEnhanceMapKey of Object.keys(outputTypesEnhanceMap)) {
    const outputTypeName = outputTypeEnhanceMapKey as keyof typeof outputTypesEnhanceMap;
    const typeConfig = outputTypesEnhanceMap[outputTypeName]!;
    const typeClass = outputTypes[outputTypeName];
    const typeTarget = typeClass.prototype;
    applyTypeClassEnhanceConfig(
      typeConfig,
      typeClass,
      typeTarget,
      outputsInfo[outputTypeName as keyof typeof outputsInfo],
    );
  }
}

"
`;

exports[`emitOnly generator option when only 'outputs' is set should generate proper files, enhance and index: mainIndex 1`] = `
"import { NonEmptyArray } from \\"type-graphql\\";

export * from \\"./enums\\";
export * from \\"./resolvers/outputs\\";
export * from \\"./enhance\\";
export * from \\"./scalars\\";
"
`;

exports[`emitOnly generator option when only 'outputs' is set should generate proper files, enhance and index: structure 1`] = `
"
[type-graphql]
  enhance.ts
  [enums]
    JsonNullValueFilter.ts
    JsonNullValueInput.ts
    PostScalarFieldEnum.ts
    QueryMode.ts
    SortOrder.ts
    UserScalarFieldEnum.ts
    index.ts
  helpers.ts
  index.ts
  [resolvers]
    [outputs]
      AffectedRowsOutput.ts
      AggregatePost.ts
      AggregateUser.ts
      PostAvgAggregate.ts
      PostCountAggregate.ts
      PostGroupBy.ts
      PostMaxAggregate.ts
      PostMinAggregate.ts
      PostSumAggregate.ts
      UserAvgAggregate.ts
      UserCount.ts
      UserCountAggregate.ts
      UserGroupBy.ts
      UserMaxAggregate.ts
      UserMinAggregate.ts
      UserSumAggregate.ts
      index.ts
  scalars.ts
"
`;

exports[`emitOnly generator option when only 'relationResolvers' is set should generate proper files, enhance and index: enhance 1`] = `
"import { ClassType } from \\"type-graphql\\";
import * as relationResolvers from \\"./resolvers/relations/resolvers.index\\";
import * as models from \\"./models\\";
import * as inputTypes from \\"./resolvers/inputs\\";

const relationResolversMap = {
  User: relationResolvers.UserRelationsResolver,
  Post: relationResolvers.PostRelationsResolver
};
const relationResolversInfo = {
  User: [\\"posts\\"],
  Post: [\\"author\\"]
};

type RelationResolverModelNames = keyof typeof relationResolversMap;

type RelationResolverActionNames<
  TModel extends RelationResolverModelNames
  > = keyof typeof relationResolversMap[TModel][\\"prototype\\"];

export type RelationResolverActionsConfig<TModel extends RelationResolverModelNames>
  = Partial<Record<RelationResolverActionNames<TModel> | \\"_all\\", MethodDecorator[]>>;

export type RelationResolversEnhanceMap = {
  [TModel in RelationResolverModelNames]?: RelationResolverActionsConfig<TModel>;
};

export function applyRelationResolversEnhanceMap(
  relationResolversEnhanceMap: RelationResolversEnhanceMap,
) {
  for (const relationResolversEnhanceMapKey of Object.keys(relationResolversEnhanceMap)) {
    const modelName = relationResolversEnhanceMapKey as keyof typeof relationResolversEnhanceMap;
    const relationResolverTarget = relationResolversMap[modelName].prototype;
    const relationResolverActionsConfig = relationResolversEnhanceMap[modelName]!;
    if (relationResolverActionsConfig._all) {
      const allActionsDecorators = relationResolverActionsConfig._all;
      const relationResolverActionNames = relationResolversInfo[modelName as keyof typeof relationResolversInfo];
      for (const relationResolverActionName of relationResolverActionNames) {
        for (const allActionsDecorator of allActionsDecorators) {
          allActionsDecorator(
            relationResolverTarget,
            relationResolverActionName,
            Object.getOwnPropertyDescriptor(relationResolverTarget, relationResolverActionName)!,
          );
        }
      }
    }
    const relationResolverActionsToApply = Object.keys(relationResolverActionsConfig).filter(
      it => it !== \\"_all\\"
    );
    for (const relationResolverActionName of relationResolverActionsToApply) {
      const decorators = relationResolverActionsConfig[
        relationResolverActionName as keyof typeof relationResolverActionsConfig
      ] as MethodDecorator[];
      for (const decorator of decorators) {
        decorator(
          relationResolverTarget,
          relationResolverActionName,
          Object.getOwnPropertyDescriptor(relationResolverTarget, relationResolverActionName)!,
        );
      }
    }
  }
}

type TypeConfig = {
  class?: ClassDecorator[];
  fields?: FieldsConfig;
};

type FieldsConfig<TTypeKeys extends string = string> = Partial<
  Record<TTypeKeys | \\"_all\\", PropertyDecorator[]>
>;

function applyTypeClassEnhanceConfig<
  TEnhanceConfig extends TypeConfig,
  TType extends object
>(
  enhanceConfig: TEnhanceConfig,
  typeClass: ClassType<TType>,
  typePrototype: TType,
  typeFieldNames: string[]
) {
  if (enhanceConfig.class) {
    for (const decorator of enhanceConfig.class) {
      decorator(typeClass);
    }
  }
  if (enhanceConfig.fields) {
    if (enhanceConfig.fields._all) {
      const allFieldsDecorators = enhanceConfig.fields._all;
      for (const typeFieldName of typeFieldNames) {
        for (const allFieldsDecorator of allFieldsDecorators) {
          allFieldsDecorator(typePrototype, typeFieldName);
        }
      }
    }
    const configFieldsToApply = Object.keys(enhanceConfig.fields).filter(
      it => it !== \\"_all\\"
    );
    for (const typeFieldName of configFieldsToApply) {
      const fieldDecorators = enhanceConfig.fields[typeFieldName]!;
      for (const fieldDecorator of fieldDecorators) {
        fieldDecorator(typePrototype, typeFieldName);
      }
    }
  }
}

const modelsInfo = {
  User: [\\"id\\", \\"email\\"],
  Post: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"authorId\\", \\"metadata\\"]
};

type ModelNames = keyof typeof models;

type ModelFieldNames<TModel extends ModelNames> = Exclude<
  keyof typeof models[TModel][\\"prototype\\"],
  number | symbol
>;

type ModelFieldsConfig<TModel extends ModelNames> = FieldsConfig<
  ModelFieldNames<TModel>
>;

export type ModelConfig<TModel extends ModelNames> = {
  class?: ClassDecorator[];
  fields?: ModelFieldsConfig<TModel>;
};

export type ModelsEnhanceMap = {
  [TModel in ModelNames]?: ModelConfig<TModel>;
};

export function applyModelsEnhanceMap(modelsEnhanceMap: ModelsEnhanceMap) {
  for (const modelsEnhanceMapKey of Object.keys(modelsEnhanceMap)) {
    const modelName = modelsEnhanceMapKey as keyof typeof modelsEnhanceMap;
    const modelConfig = modelsEnhanceMap[modelName]!;
    const modelClass = models[modelName];
    const modelTarget = modelClass.prototype;
    applyTypeClassEnhanceConfig(
      modelConfig,
      modelClass,
      modelTarget,
      modelsInfo[modelName as keyof typeof modelsInfo],
    );
  }
}

const inputsInfo = {
  UserWhereInput: [\\"AND\\", \\"OR\\", \\"NOT\\", \\"id\\", \\"email\\", \\"posts\\"],
  UserOrderByWithRelationInput: [\\"id\\", \\"email\\", \\"posts\\"],
  UserWhereUniqueInput: [\\"id\\", \\"email\\"],
  UserOrderByWithAggregationInput: [\\"id\\", \\"email\\", \\"_count\\", \\"_avg\\", \\"_max\\", \\"_min\\", \\"_sum\\"],
  UserScalarWhereWithAggregatesInput: [\\"AND\\", \\"OR\\", \\"NOT\\", \\"id\\", \\"email\\"],
  PostWhereInput: [\\"AND\\", \\"OR\\", \\"NOT\\", \\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"author\\", \\"authorId\\", \\"metadata\\"],
  PostOrderByWithRelationInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"author\\", \\"authorId\\", \\"metadata\\"],
  PostWhereUniqueInput: [\\"uuid\\"],
  PostOrderByWithAggregationInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"authorId\\", \\"metadata\\", \\"_count\\", \\"_avg\\", \\"_max\\", \\"_min\\", \\"_sum\\"],
  PostScalarWhereWithAggregatesInput: [\\"AND\\", \\"OR\\", \\"NOT\\", \\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"authorId\\", \\"metadata\\"],
  UserCreateInput: [\\"email\\", \\"posts\\"],
  UserUpdateInput: [\\"email\\", \\"posts\\"],
  UserCreateManyInput: [\\"id\\", \\"email\\"],
  UserUpdateManyMutationInput: [\\"email\\"],
  PostCreateInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"metadata\\", \\"author\\"],
  PostUpdateInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"metadata\\", \\"author\\"],
  PostCreateManyInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"authorId\\", \\"metadata\\"],
  PostUpdateManyMutationInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"metadata\\"],
  IntFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"not\\"],
  StringFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"contains\\", \\"startsWith\\", \\"endsWith\\", \\"mode\\", \\"not\\"],
  PostListRelationFilter: [\\"every\\", \\"some\\", \\"none\\"],
  PostOrderByRelationAggregateInput: [\\"_count\\"],
  UserCountOrderByAggregateInput: [\\"id\\", \\"email\\"],
  UserAvgOrderByAggregateInput: [\\"id\\"],
  UserMaxOrderByAggregateInput: [\\"id\\", \\"email\\"],
  UserMinOrderByAggregateInput: [\\"id\\", \\"email\\"],
  UserSumOrderByAggregateInput: [\\"id\\"],
  IntWithAggregatesFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"not\\", \\"_count\\", \\"_avg\\", \\"_sum\\", \\"_min\\", \\"_max\\"],
  StringWithAggregatesFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"contains\\", \\"startsWith\\", \\"endsWith\\", \\"mode\\", \\"not\\", \\"_count\\", \\"_min\\", \\"_max\\"],
  DateTimeFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"not\\"],
  BoolFilter: [\\"equals\\", \\"not\\"],
  StringNullableFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"contains\\", \\"startsWith\\", \\"endsWith\\", \\"mode\\", \\"not\\"],
  UserRelationFilter: [\\"is\\", \\"isNot\\"],
  JsonFilter: [\\"equals\\", \\"not\\"],
  PostCountOrderByAggregateInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"authorId\\", \\"metadata\\"],
  PostAvgOrderByAggregateInput: [\\"authorId\\"],
  PostMaxOrderByAggregateInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"authorId\\"],
  PostMinOrderByAggregateInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"authorId\\"],
  PostSumOrderByAggregateInput: [\\"authorId\\"],
  DateTimeWithAggregatesFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"not\\", \\"_count\\", \\"_min\\", \\"_max\\"],
  BoolWithAggregatesFilter: [\\"equals\\", \\"not\\", \\"_count\\", \\"_min\\", \\"_max\\"],
  StringNullableWithAggregatesFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"contains\\", \\"startsWith\\", \\"endsWith\\", \\"mode\\", \\"not\\", \\"_count\\", \\"_min\\", \\"_max\\"],
  JsonWithAggregatesFilter: [\\"equals\\", \\"not\\", \\"_count\\", \\"_min\\", \\"_max\\"],
  PostCreateNestedManyWithoutAuthorInput: [\\"create\\", \\"connectOrCreate\\", \\"createMany\\", \\"connect\\"],
  StringFieldUpdateOperationsInput: [\\"set\\"],
  PostUpdateManyWithoutAuthorInput: [\\"create\\", \\"connectOrCreate\\", \\"upsert\\", \\"createMany\\", \\"connect\\", \\"set\\", \\"disconnect\\", \\"delete\\", \\"update\\", \\"updateMany\\", \\"deleteMany\\"],
  IntFieldUpdateOperationsInput: [\\"set\\", \\"increment\\", \\"decrement\\", \\"multiply\\", \\"divide\\"],
  UserCreateNestedOneWithoutPostsInput: [\\"create\\", \\"connectOrCreate\\", \\"connect\\"],
  DateTimeFieldUpdateOperationsInput: [\\"set\\"],
  BoolFieldUpdateOperationsInput: [\\"set\\"],
  NullableStringFieldUpdateOperationsInput: [\\"set\\"],
  UserUpdateOneRequiredWithoutPostsInput: [\\"create\\", \\"connectOrCreate\\", \\"upsert\\", \\"connect\\", \\"update\\"],
  NestedIntFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"not\\"],
  NestedStringFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"contains\\", \\"startsWith\\", \\"endsWith\\", \\"not\\"],
  NestedIntWithAggregatesFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"not\\", \\"_count\\", \\"_avg\\", \\"_sum\\", \\"_min\\", \\"_max\\"],
  NestedFloatFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"not\\"],
  NestedStringWithAggregatesFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"contains\\", \\"startsWith\\", \\"endsWith\\", \\"not\\", \\"_count\\", \\"_min\\", \\"_max\\"],
  NestedDateTimeFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"not\\"],
  NestedBoolFilter: [\\"equals\\", \\"not\\"],
  NestedStringNullableFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"contains\\", \\"startsWith\\", \\"endsWith\\", \\"not\\"],
  NestedDateTimeWithAggregatesFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"not\\", \\"_count\\", \\"_min\\", \\"_max\\"],
  NestedBoolWithAggregatesFilter: [\\"equals\\", \\"not\\", \\"_count\\", \\"_min\\", \\"_max\\"],
  NestedStringNullableWithAggregatesFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"contains\\", \\"startsWith\\", \\"endsWith\\", \\"not\\", \\"_count\\", \\"_min\\", \\"_max\\"],
  NestedIntNullableFilter: [\\"equals\\", \\"in\\", \\"notIn\\", \\"lt\\", \\"lte\\", \\"gt\\", \\"gte\\", \\"not\\"],
  NestedJsonFilter: [\\"equals\\", \\"not\\"],
  PostCreateWithoutAuthorInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"metadata\\"],
  PostCreateOrConnectWithoutAuthorInput: [\\"where\\", \\"create\\"],
  PostCreateManyAuthorInputEnvelope: [\\"data\\", \\"skipDuplicates\\"],
  PostUpsertWithWhereUniqueWithoutAuthorInput: [\\"where\\", \\"update\\", \\"create\\"],
  PostUpdateWithWhereUniqueWithoutAuthorInput: [\\"where\\", \\"data\\"],
  PostUpdateManyWithWhereWithoutAuthorInput: [\\"where\\", \\"data\\"],
  PostScalarWhereInput: [\\"AND\\", \\"OR\\", \\"NOT\\", \\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"authorId\\", \\"metadata\\"],
  UserCreateWithoutPostsInput: [\\"email\\"],
  UserCreateOrConnectWithoutPostsInput: [\\"where\\", \\"create\\"],
  UserUpsertWithoutPostsInput: [\\"update\\", \\"create\\"],
  UserUpdateWithoutPostsInput: [\\"email\\"],
  PostCreateManyAuthorInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"metadata\\"],
  PostUpdateWithoutAuthorInput: [\\"uuid\\", \\"createdAt\\", \\"updatedAt\\", \\"published\\", \\"title\\", \\"content\\", \\"metadata\\"]
};

type InputTypesNames = keyof typeof inputTypes;

type InputTypeFieldNames<TInput extends InputTypesNames> = Exclude<
  keyof typeof inputTypes[TInput][\\"prototype\\"],
  number | symbol
>;

type InputTypeFieldsConfig<
  TInput extends InputTypesNames
  > = FieldsConfig<InputTypeFieldNames<TInput>>;

export type InputTypeConfig<TInput extends InputTypesNames> = {
  class?: ClassDecorator[];
  fields?: InputTypeFieldsConfig<TInput>;
};

export type InputTypesEnhanceMap = {
  [TInput in InputTypesNames]?: InputTypeConfig<TInput>;
};

export function applyInputTypesEnhanceMap(
  inputTypesEnhanceMap: InputTypesEnhanceMap,
) {
  for (const inputTypeEnhanceMapKey of Object.keys(inputTypesEnhanceMap)) {
    const inputTypeName = inputTypeEnhanceMapKey as keyof typeof inputTypesEnhanceMap;
    const typeConfig = inputTypesEnhanceMap[inputTypeName]!;
    const typeClass = inputTypes[inputTypeName];
    const typeTarget = typeClass.prototype;
    applyTypeClassEnhanceConfig(
      typeConfig,
      typeClass,
      typeTarget,
      inputsInfo[inputTypeName as keyof typeof inputsInfo],
    );
  }
}

"
`;

exports[`emitOnly generator option when only 'relationResolvers' is set should generate proper files, enhance and index: mainIndex 1`] = `
"import * as relationResolversImport from \\"./resolvers/relations/resolvers.index\\";
import { NonEmptyArray } from \\"type-graphql\\";

export * from \\"./enums\\";
export * from \\"./models\\";
export * from \\"./resolvers/relations\\";

export const relationResolvers = Object.values(relationResolversImport) as unknown as NonEmptyArray<Function>;

export * from \\"./resolvers/inputs\\";
export * from \\"./enhance\\";
export * from \\"./scalars\\";

export const resolvers = [

  ...relationResolvers,
] as unknown as NonEmptyArray<Function>;
"
`;

exports[`emitOnly generator option when only 'relationResolvers' is set should generate proper files, enhance and index: structure 1`] = `
"
[type-graphql]
  enhance.ts
  [enums]
    JsonNullValueFilter.ts
    JsonNullValueInput.ts
    PostScalarFieldEnum.ts
    QueryMode.ts
    SortOrder.ts
    UserScalarFieldEnum.ts
    index.ts
  helpers.ts
  index.ts
  [models]
    Post.ts
    User.ts
    index.ts
  [resolvers]
    [inputs]
      BoolFieldUpdateOperationsInput.ts
      BoolFilter.ts
      BoolWithAggregatesFilter.ts
      DateTimeFieldUpdateOperationsInput.ts
      DateTimeFilter.ts
      DateTimeWithAggregatesFilter.ts
      IntFieldUpdateOperationsInput.ts
      IntFilter.ts
      IntWithAggregatesFilter.ts
      JsonFilter.ts
      JsonWithAggregatesFilter.ts
      NestedBoolFilter.ts
      NestedBoolWithAggregatesFilter.ts
      NestedDateTimeFilter.ts
      NestedDateTimeWithAggregatesFilter.ts
      NestedFloatFilter.ts
      NestedIntFilter.ts
      NestedIntNullableFilter.ts
      NestedIntWithAggregatesFilter.ts
      NestedJsonFilter.ts
      NestedStringFilter.ts
      NestedStringNullableFilter.ts
      NestedStringNullableWithAggregatesFilter.ts
      NestedStringWithAggregatesFilter.ts
      NullableStringFieldUpdateOperationsInput.ts
      PostAvgOrderByAggregateInput.ts
      PostCountOrderByAggregateInput.ts
      PostCreateInput.ts
      PostCreateManyAuthorInput.ts
      PostCreateManyAuthorInputEnvelope.ts
      PostCreateManyInput.ts
      PostCreateNestedManyWithoutAuthorInput.ts
      PostCreateOrConnectWithoutAuthorInput.ts
      PostCreateWithoutAuthorInput.ts
      PostListRelationFilter.ts
      PostMaxOrderByAggregateInput.ts
      PostMinOrderByAggregateInput.ts
      PostOrderByRelationAggregateInput.ts
      PostOrderByWithAggregationInput.ts
      PostOrderByWithRelationInput.ts
      PostScalarWhereInput.ts
      PostScalarWhereWithAggregatesInput.ts
      PostSumOrderByAggregateInput.ts
      PostUpdateInput.ts
      PostUpdateManyMutationInput.ts
      PostUpdateManyWithWhereWithoutAuthorInput.ts
      PostUpdateManyWithoutAuthorInput.ts
      PostUpdateWithWhereUniqueWithoutAuthorInput.ts
      PostUpdateWithoutAuthorInput.ts
      PostUpsertWithWhereUniqueWithoutAuthorInput.ts
      PostWhereInput.ts
      PostWhereUniqueInput.ts
      StringFieldUpdateOperationsInput.ts
      StringFilter.ts
      StringNullableFilter.ts
      StringNullableWithAggregatesFilter.ts
      StringWithAggregatesFilter.ts
      UserAvgOrderByAggregateInput.ts
      UserCountOrderByAggregateInput.ts
      UserCreateInput.ts
      UserCreateManyInput.ts
      UserCreateNestedOneWithoutPostsInput.ts
      UserCreateOrConnectWithoutPostsInput.ts
      UserCreateWithoutPostsInput.ts
      UserMaxOrderByAggregateInput.ts
      UserMinOrderByAggregateInput.ts
      UserOrderByWithAggregationInput.ts
      UserOrderByWithRelationInput.ts
      UserRelationFilter.ts
      UserScalarWhereWithAggregatesInput.ts
      UserSumOrderByAggregateInput.ts
      UserUpdateInput.ts
      UserUpdateManyMutationInput.ts
      UserUpdateOneRequiredWithoutPostsInput.ts
      UserUpdateWithoutPostsInput.ts
      UserUpsertWithoutPostsInput.ts
      UserWhereInput.ts
      UserWhereUniqueInput.ts
      index.ts
    [relations]
      [Post]
        PostRelationsResolver.ts
      [User]
        UserRelationsResolver.ts
        [args]
          UserPostsArgs.ts
          index.ts
      args.index.ts
      index.ts
      resolvers.index.ts
  scalars.ts
"
`;
